--- a/application.html
+++ b/application.html
@@ -118,13 +118,13 @@
           </div>
 
           <div class="conNeiText">  
-            <p style="text-indent:2em;font-size: 16px;">
+            <p style="text-indent:2em;font-size: 16px!important;">
               活性炭是将各种类型的碳化料在一定条件下加热，以减少非碳成分，同时表面被侵蚀形成孔径发达的一种碳材料。
             </p>
-            <p style="text-indent:2em;font-size: 16px;">
+            <p style="text-indent:2em;font-size: 16px!important;">
               活性炭的原料有多种来源，常用有木质、煤质、椰壳、果壳等。从化学本质而言，实际是木制纤维素（五碳糖的高分子多糖聚合物）被侵蚀后碳链断裂同时石墨化的过程。活性炭主要有化学法及蒸汽法，通过调整活化时间、活化温度、活化进料比例等，可以实现活性炭孔径分布的调控。
             </p>
-            <p style="text-indent:2em;font-size: 16px;">
+            <p style="text-indent:2em;font-size: 16px!important;">
               活性炭因其化学结构、pH稳定，同时有非常发达及分布可控的特性，应用非常广泛！按照行业划分，活性炭可用于医药、食品、化工、气体、水、溶剂、金矿、催化剂、超级电容器等行业，根据其应用特性的不同，不同行业对于活性炭的参数诉求也不相同。飞肯新材的人员有着10年以上的活性炭研发及应用经验，可根据不同应用为客户精准筛选活性炭，同时提供废碳回收、碳罐更换等服务，欢迎前来咨询！
             </p>       
                                     
