--- a/capacitor.html
+++ b/capacitor.html
@@ -101,11 +101,11 @@
             <div style="text-align:center;">
               <img src="./image/capacitor1-0.jpg" style="width: 80%;">
             </div>
-            <p style="text-indent: 2em;">超级电容器是指介于传统电容器和充电电池之间的一种新型储能装置，它既具有电容器快速充放电的特性，同时又具有电池的储能特性。
+            <p style="text-indent: 2em;font-size: 16px!important;">超级电容器是指介于传统电容器和充电电池之间的一种新型储能装置，它既具有电容器快速充放电的特性，同时又具有电池的储能特性。
             </p>
-            <p style="text-indent: 2em;">超级电容活性炭通常称为超级活性炭或炭电极材料，具有超大的比表面积（2000m2/g以上），一般为椰壳粉末碳，孔径分布集中，低灰分，导电性好，适用制造高性能电池及双电层电容器产品。其具有电容的大电流快速充放电特性，同时也兼有电池的储能特性，重复使用寿命长，放电时利用移动导体间的电子（而不依靠化学反应）释放电流，从而为设备提供电源。 
+            <p style="text-indent: 2em;font-size: 16px!important;">超级电容活性炭通常称为超级活性炭或炭电极材料，具有超大的比表面积（2000m2/g以上），一般为椰壳粉末碳，孔径分布集中，低灰分，导电性好，适用制造高性能电池及双电层电容器产品。其具有电容的大电流快速充放电特性，同时也兼有电池的储能特性，重复使用寿命长，放电时利用移动导体间的电子（而不依靠化学反应）释放电流，从而为设备提供电源。 
             </p>
-            <p style="text-indent: 2em;">超级电容器极长的工作寿命和快速充放电特性，也在电动车辆、混合动力车辆、电动工具、电动玩具、铁路系统、电力系统等广泛的领域得到应用。
+            <p style="text-indent: 2em;font-size: 16px!important;">超级电容器极长的工作寿命和快速充放电特性，也在电动车辆、混合动力车辆、电动工具、电动玩具、铁路系统、电力系统等广泛的领域得到应用。
             </p>                         
             <div style="text-align:center;">
               <img src="./image/capacitor1-1.jpg" style="width: 50%;">
