--- a/catalyst1.html
+++ b/catalyst1.html
@@ -113,13 +113,13 @@
             <div style="text-align:center;">
               <img src="./image/catalyst1-0.jpg" style="width: 80%;">
             </div>
-            <p style="text-indent: 2em;">PU为聚氨酯树脂，是由聚醚多元醇与异氰酸酯聚合而成，主要应用于各种泡沫塑料、弹性体、涂料、橡胶、纤维等领域。其中聚醚多元醇由多元醇起始剂如甘油、乙二醇、丙二醇等与氧化烯烃或环氧化物如环氧乙烷、环氧丙烷等在催化剂下开环聚合得到，其催化剂主要有阴离子型的碱金属氧化物及阳离子型的路易斯酸。
+            <p style="text-indent: 2em;font-size: 16px!important;">PU为聚氨酯树脂，是由聚醚多元醇与异氰酸酯聚合而成，主要应用于各种泡沫塑料、弹性体、涂料、橡胶、纤维等领域。其中聚醚多元醇由多元醇起始剂如甘油、乙二醇、丙二醇等与氧化烯烃或环氧化物如环氧乙烷、环氧丙烷等在催化剂下开环聚合得到，其催化剂主要有阴离子型的碱金属氧化物及阳离子型的路易斯酸。
             </p>
-            <p style="text-indent: 2em;">而异氰酸酯，属于含有-NCO基团的总称，目前市面上使用最广泛的有TDI（二甲苯二异氰酸酯），MDI（二苯基甲烷二异氰酸酯）这两种，还有诸如IPDI、HDI等新产品。
+            <p style="text-indent: 2em;font-size: 16px!important;">而异氰酸酯，属于含有-NCO基团的总称，目前市面上使用最广泛的有TDI（二甲苯二异氰酸酯），MDI（二苯基甲烷二异氰酸酯）这两种，还有诸如IPDI、HDI等新产品。
             </p>
-            <p style="text-indent: 2em;">TDI的合成，其实原料为甲苯，经过二段硝化后得到DNT，再经过Pd/C或雷尼镍的还原后得到TDA，然后与光气直接反应得到TDI。一般光气是CO与Cl2在现场通过活性炭直接催化得到，TDA的光气化反应完之后，会残留部分光气，也会通过尾部的活性炭催化装置处理。
+            <p style="text-indent: 2em;font-size: 16px!important;">TDI的合成，其实原料为甲苯，经过二段硝化后得到DNT，再经过Pd/C或雷尼镍的还原后得到TDA，然后与光气直接反应得到TDI。一般光气是CO与Cl2在现场通过活性炭直接催化得到，TDA的光气化反应完之后，会残留部分光气，也会通过尾部的活性炭催化装置处理。
             </p>
-            <p style="text-indent: 2em;">MDI的合成，其实原料是苯，通过硝化后再经过Pd/C或雷尼镍还原后得到苯胺，然后与甲醛缩合得到MDA，最后光气化得到MDI，同样也存在光气的后处理过程。
+            <p style="text-indent: 2em;font-size: 16px!important;">MDI的合成，其实原料是苯，通过硝化后再经过Pd/C或雷尼镍还原后得到苯胺，然后与甲醛缩合得到MDA，最后光气化得到MDI，同样也存在光气的后处理过程。
             </p>
             <p class="clear"></p>
             <br>
