--- a/catalyst2.html
+++ b/catalyst2.html
@@ -113,9 +113,9 @@
             <div style="text-align:center;">
               <img src="./image/catalyst2-0.jpg" style="width: 30%;">
             </div>
-            <p style="text-indent: 2em;">三聚氰氯（C3N3Cl3），又名1,3,5-三氯均三嗪，一种重要的精细化工产品，具有广泛的用途 在农药产品，可用于如灭蝇胺、扑草净、西玛津、西草净、阿特拉津、特丁津、莠灭净等合成；在活性染料中，可制备如直接黄L-5R、活性嫩黄X-6G、活性嫩黄X-7G等；在荧光增白剂中，可与DSD酸结合同时进行氨性烷基基团取代得到增白剂；也可用于诸如纺织物防缩水剂、表面活性剂、橡胶促进剂等工业生产中。
+            <p style="text-indent: 2em;font-size: 16px!important;">三聚氰氯（C3N3Cl3），又名1,3,5-三氯均三嗪，一种重要的精细化工产品，具有广泛的用途 在农药产品，可用于如灭蝇胺、扑草净、西玛津、西草净、阿特拉津、特丁津、莠灭净等合成；在活性染料中，可制备如直接黄L-5R、活性嫩黄X-6G、活性嫩黄X-7G等；在荧光增白剂中，可与DSD酸结合同时进行氨性烷基基团取代得到增白剂；也可用于诸如纺织物防缩水剂、表面活性剂、橡胶促进剂等工业生产中。
             </p>
-            <p style="text-indent: 2em;">三聚氰氯的生产工艺比较简单，一般先通过氰化钠或氢氰酸与氯气反应生成氯氰，再通过活性炭直接催化得到三聚氯氰。
+            <p style="text-indent: 2em;font-size: 16px!important;">三聚氰氯的生产工艺比较简单，一般先通过氰化钠或氢氰酸与氯气反应生成氯氰，再通过活性炭直接催化得到三聚氯氰。
             </p>
             <p class="clear"></p>
             <br>
