--- a/catalyst3.html
+++ b/catalyst3.html
@@ -113,14 +113,14 @@
             <div style="text-align:center;">
               <img src="./image/catalyst3-0.jpg" style="width: 80%;">
             </div>
-            <p style="text-indent: 2em;">氯乙烯又名乙烯基氯，是一种应用于高分子化工的重要的单体，主要用于制造PVC树脂，市场用途巨大，可用于大口径管材、家用耐热制品(如车防锈涂料/计算机外壳/护墙板/窗型材)、纤维增强制品(如管材/机箱等阻燃pvc制品)以及用于包装的硬片膜制品等。
+            <p style="text-indent: 2em;font-size: 16px!important;">氯乙烯又名乙烯基氯，是一种应用于高分子化工的重要的单体，主要用于制造PVC树脂，市场用途巨大，可用于大口径管材、家用耐热制品(如车防锈涂料/计算机外壳/护墙板/窗型材)、纤维增强制品(如管材/机箱等阻燃pvc制品)以及用于包装的硬片膜制品等。
             </p>
-            <p style="text-indent: 2em;">氯乙烯的生成有乙烯法和乙炔法，而国内煤化工行业发达，一般多采用乙炔法，起始原料为电石（CaC2），经过水解后得到乙炔，再与氯化氢在催化剂的作用下反应得到氯乙烯。传统的催化剂为Hg/C，但由于Hg有剧毒，为国家严格限定排放产品，于2025年将面临禁止使用。
+            <p style="text-indent: 2em;font-size: 16px!important;">氯乙烯的生成有乙烯法和乙炔法，而国内煤化工行业发达，一般多采用乙炔法，起始原料为电石（CaC2），经过水解后得到乙炔，再与氯化氢在催化剂的作用下反应得到氯乙烯。传统的催化剂为Hg/C，但由于Hg有剧毒，为国家严格限定排放产品，于2025年将面临禁止使用。
             </p>
             <div style="text-align:center;">
               <img src="./image/catalyst3-1.jpg" style="width: 80%;">
             </div>
-            <p style="text-indent: 2em;">目前国内多采用含金合金催化剂和贱金属合金催化剂，大部分使用柱状碳，也有少部分应用颗粒碳，要求催化剂的转化效率能在7800h的使用时间内保持稳定，因此对碳的强度及孔径分布也有较高要求。由于氯乙烯含烯烃，而碳本身也是非常好的催化剂，一旦碳材料有许多酸性位点，将会很容易导致聚合，从而导致孔径堵塞，影响催化剂活性及寿命。而VCM属于小分子，一般蛋白型催化剂载体较为适合这种类型催化，因此在使用前需要对活性炭进行改性处理，便于形成蛋白型催化剂。
+            <p style="text-indent: 2em;font-size: 16px!important;">目前国内多采用含金合金催化剂和贱金属合金催化剂，大部分使用柱状碳，也有少部分应用颗粒碳，要求催化剂的转化效率能在7800h的使用时间内保持稳定，因此对碳的强度及孔径分布也有较高要求。由于氯乙烯含烯烃，而碳本身也是非常好的催化剂，一旦碳材料有许多酸性位点，将会很容易导致聚合，从而导致孔径堵塞，影响催化剂活性及寿命。而VCM属于小分子，一般蛋白型催化剂载体较为适合这种类型催化，因此在使用前需要对活性炭进行改性处理，便于形成蛋白型催化剂。
             </p>        
 
             <p class="clear"></p>
