--- a/catalyst4.html
+++ b/catalyst4.html
@@ -113,7 +113,7 @@
             <div style="text-align:center;">
               <img src="./image/catalyst4-0.jpg" style="width: 80%;">
             </div>
-            <p style="text-indent: 2em;">在精细化学品的生产中，会涉及大量的加氢反应，比较典型的如炔烃及烯烃的氢化，双键选择性加氢，脱苄基氢解反应，芳香族硝化物的氢化，羰基的氢化，苯环的氢化，苯酚的氢化，氢化脱卤，歧化反应等等，这些反应有些会用到贵金属催化剂，如Pt/C，Rh/C,  Pd/C等，不同的催化底物及反应条件对活性炭的选择会有所不同，包括孔径分布、粒度、比表、孔容、pH等，对催化剂的负载及性能都会有非常大的影响。 </p>
+            <p style="text-indent: 2em;font-size: 16px!important;">在精细化学品的生产中，会涉及大量的加氢反应，比较典型的如炔烃及烯烃的氢化，双键选择性加氢，脱苄基氢解反应，芳香族硝化物的氢化，羰基的氢化，苯环的氢化，苯酚的氢化，氢化脱卤，歧化反应等等，这些反应有些会用到贵金属催化剂，如Pt/C，Rh/C,  Pd/C等，不同的催化底物及反应条件对活性炭的选择会有所不同，包括孔径分布、粒度、比表、孔容、pH等，对催化剂的负载及性能都会有非常大的影响。 </p>
             <p class="clear"></p>
             <br>
           </div>
