--- a/chemical1.html
+++ b/chemical1.html
@@ -119,17 +119,17 @@
             <div style="text-align:center;">
               <img src="./image/chemical1-0.jpg" style="width: 80%;">
             </div>
-            <p style="text-indent: 2em;">颜色是石油产品的一项重要指标，直接反映出石油产品的精制程度和稳定性，我国石油产品颜色测定法把石油产品的颜色分为16个色号。依次加深为1.0，1.5，2.0……颜色最深的为8.0。润滑油是由基础油再加入少量的添加剂组成，基础油的颜色从白色、淡黄色到深褐色，色泽可作为判断基础油精制的深度，色泽的深浅取决于油中胶质含量的多少，胶质除去的越多，色泽就越浅，也就是油越纯，相对而言油越纯质量也越好。
+            <p style="text-indent: 2em;font-size: 16px!important;">颜色是石油产品的一项重要指标，直接反映出石油产品的精制程度和稳定性，我国石油产品颜色测定法把石油产品的颜色分为16个色号。依次加深为1.0，1.5，2.0……颜色最深的为8.0。润滑油是由基础油再加入少量的添加剂组成，基础油的颜色从白色、淡黄色到深褐色，色泽可作为判断基础油精制的深度，色泽的深浅取决于油中胶质含量的多少，胶质除去的越多，色泽就越浅，也就是油越纯，相对而言油越纯质量也越好。
             </p>
             
-            <p style="text-indent: 2em;">润滑油的生产过程如下，原油先经常压蒸馏，蒸馏出汽、煤、柴油等轻质馏分的常压塔底渣油，再经减压蒸馏，分离出轻、中、重质馏分油料，减压塔底渣油再经丙烷脱沥青后，制得残渣润滑油料。制备好的馏分及残渣润滑油料，分别经过溶剂精制、脱蜡及补充精制，得到润滑油基础油，最后进入成品油调合工序，与添加剂优化配伍，即得成品润滑油。
+            <p style="text-indent: 2em;font-size: 16px!important;">润滑油的生产过程如下，原油先经常压蒸馏，蒸馏出汽、煤、柴油等轻质馏分的常压塔底渣油，再经减压蒸馏，分离出轻、中、重质馏分油料，减压塔底渣油再经丙烷脱沥青后，制得残渣润滑油料。制备好的馏分及残渣润滑油料，分别经过溶剂精制、脱蜡及补充精制，得到润滑油基础油，最后进入成品油调合工序，与添加剂优化配伍，即得成品润滑油。
             </p>
 
             <div style="text-align:center;">
               <img src="./image/chemical1-1.jpg" style="width: 80%;">
             </div>
             
-            <p style="text-indent: 2em;">润滑油基础油的三道精制过程中，最后一道是补充精制，主要是为了进一步改善其抗氧化性能，一般采用活性白土和活性炭联用。活性白土主成分是SiO2(60%)，Al2O3(17%)，比表面积小，超大孔较多，以极性吸附为主，对碱性原子团及极性原子团的吸附能力较强，过滤快，但脱色后会有一定的土腥味；而活性炭孔径中大孔较多，以非极性吸附为主，比表面积非常大，对蓝色和绿色色素的脱除特别有效，还能脱除微量矿物油带给油脂的闪光，脱色后无异味，但过滤相对较慢，而且价格比活性白土要贵很多。一般在使用中，混合比例为活性炭占5~10%的使用比例。
+            <p style="text-indent: 2em;font-size: 16px!important;">润滑油基础油的三道精制过程中，最后一道是补充精制，主要是为了进一步改善其抗氧化性能，一般采用活性白土和活性炭联用。活性白土主成分是SiO2(60%)，Al2O3(17%)，比表面积小，超大孔较多，以极性吸附为主，对碱性原子团及极性原子团的吸附能力较强，过滤快，但脱色后会有一定的土腥味；而活性炭孔径中大孔较多，以非极性吸附为主，比表面积非常大，对蓝色和绿色色素的脱除特别有效，还能脱除微量矿物油带给油脂的闪光，脱色后无异味，但过滤相对较慢，而且价格比活性白土要贵很多。一般在使用中，混合比例为活性炭占5~10%的使用比例。
             </p>
 
             <p class="clear"></p>
