--- a/chemical2.html
+++ b/chemical2.html
@@ -119,21 +119,21 @@
             <div style="text-align:center;">
               <img src="./image/chemical2-0.jpg" style="width: 80%;">
             </div>
-            <p style="text-indent: 2em;">甘油是生产生物柴油的主要副产品，按照纯度主要分为两种等级，药用级甘油及技术级甘油。药用级甘油主要可用于医药、食品及化妆品领域，如抗菌防腐剂、柔和剂、保湿剂、增塑剂、溶剂、甜味剂等，也广泛应用于口服、耳、眼、局部和肠道给药制剂，对颜色及纯度要求都非常高；而技术级甘油的主要用途为生产醇类或环氧氯丙烷产品，在一些特殊领域如高端电子材料用环氧氯丙烷也同样有较高的颜色及纯度要求。
+            <p style="text-indent: 2em;font-size: 16px!important;">甘油是生产生物柴油的主要副产品，按照纯度主要分为两种等级，药用级甘油及技术级甘油。药用级甘油主要可用于医药、食品及化妆品领域，如抗菌防腐剂、柔和剂、保湿剂、增塑剂、溶剂、甜味剂等，也广泛应用于口服、耳、眼、局部和肠道给药制剂，对颜色及纯度要求都非常高；而技术级甘油的主要用途为生产醇类或环氧氯丙烷产品，在一些特殊领域如高端电子材料用环氧氯丙烷也同样有较高的颜色及纯度要求。
             </p>
 
             <div style="text-align:center;">
               <img src="./image/chemical2-1.jpg" style="width: 80%;">
             </div>
 
-            <p style="text-indent: 2em;">生物柴油副产物中提取甘油的工艺主要有 3种:减压精馏法、分子蒸馏法、离子交换法。但是, 无论采用何种工艺, 只能得到黄色的粗甘油产品，因此在高端应用领域，需要进行脱色处理。
+            <p style="text-indent: 2em;font-size: 16px!important;">生物柴油副产物中提取甘油的工艺主要有 3种:减压精馏法、分子蒸馏法、离子交换法。但是, 无论采用何种工艺, 只能得到黄色的粗甘油产品，因此在高端应用领域，需要进行脱色处理。
             </p>
 
             <div style="text-align:center;">
               <img src="./image/chemical2-2.jpg" style="width: 80%;">
             </div>
             
-            <p style="text-indent: 2em;">甘油的脱色主要是活性炭固定床吸附工艺，活性炭的添加量一般为0.1%~0.3%，温度控制在80~90℃，其中活性炭对氯离子含量、灰分、酸碱度等都有一定要求，以免影响甘油的品质。
+            <p style="text-indent: 2em;font-size: 16px!important;">甘油的脱色主要是活性炭固定床吸附工艺，活性炭的添加量一般为0.1%~0.3%，温度控制在80~90℃，其中活性炭对氯离子含量、灰分、酸碱度等都有一定要求，以免影响甘油的品质。
             </p>
 
             <p class="clear"></p>
