--- a/chemical4.html
+++ b/chemical4.html
@@ -119,13 +119,13 @@
             <div style="text-align:center;">
               <img src="./image/chemical4-0.jpg" style="width: 80%;">
             </div>
-            <p style="text-indent: 2em;">氨基酸是构成动物营养所需蛋白质的基本物质，广泛应用于食品和饲料添加剂、合成生物可降解塑料、制备药物中间体等，也被用作合成特殊化学物质的中间体，如低热质甜味剂、螯合剂以及多肽。
+            <p style="text-indent: 2em;font-size: 16px!important;">氨基酸是构成动物营养所需蛋白质的基本物质，广泛应用于食品和饲料添加剂、合成生物可降解塑料、制备药物中间体等，也被用作合成特殊化学物质的中间体，如低热质甜味剂、螯合剂以及多肽。
             </p>
             
-            <p style="text-indent: 2em;">氨基酸的生产目前主要依赖于微生物发酵过程，利用微生物的生长和代谢活动中生产各种氨基酸，一般以糖类和铵盐为主要原料，通过选择不同的菌种，同时控制微生物生长代谢的条件，达到定向合成不同种类氨基酸的目的。
+            <p style="text-indent: 2em;font-size: 16px!important;">氨基酸的生产目前主要依赖于微生物发酵过程，利用微生物的生长和代谢活动中生产各种氨基酸，一般以糖类和铵盐为主要原料，通过选择不同的菌种，同时控制微生物生长代谢的条件，达到定向合成不同种类氨基酸的目的。
             </p>
             
-            <p style="text-indent: 2em;">氨基酸发酵会含有大量的有色杂质，需要用活性炭进行脱色处理，氨基酸为两性物质，对pH较为敏感，因此在脱色时需要控制活性炭的pH。
+            <p style="text-indent: 2em;font-size: 16px!important;">氨基酸发酵会含有大量的有色杂质，需要用活性炭进行脱色处理，氨基酸为两性物质，对pH较为敏感，因此在脱色时需要控制活性炭的pH。
             </p>
 
             <div style="text-align:center;">
