--- a/chemical6.html
+++ b/chemical6.html
@@ -119,16 +119,16 @@
             <div style="text-align:center;">
               <img src="./image/chemical6-0.jpg" style="width: 80%;">
             </div>
-            <p style="text-indent: 2em;">胺液是一类有机碱溶液的统称，通常指的是在脱硫脱碳化工过程中用于吸收H2S或CO2的弱碱性胺溶剂，以醇胺类较多，常见的包括有一乙醇胺（MEA），二乙醇胺（DEA），二异丙醇胺（DIPA），N-甲基二乙醇胺（MDEA）等，常用于石油、天然气、煤化工、合成氨等化工过程，经过胺液的加热蒸馏，回送到吸附塔，循环使用
+            <p style="text-indent: 2em;font-size: 16px!important;">胺液是一类有机碱溶液的统称，通常指的是在脱硫脱碳化工过程中用于吸收H2S或CO2的弱碱性胺溶剂，以醇胺类较多，常见的包括有一乙醇胺（MEA），二乙醇胺（DEA），二异丙醇胺（DIPA），N-甲基二乙醇胺（MDEA）等，常用于石油、天然气、煤化工、合成氨等化工过程，经过胺液的加热蒸馏，回送到吸附塔，循环使用
             </p>
             
-            <p style="text-indent: 2em;">胺液脱硫系统因长期运行，系统内的降解产物及腐蚀产物不断累积。其中，胺液和酸性组分反应生成的盐，如盐酸盐、硫酸盐、甲酸盐、乙酸盐、草酸盐、硫氰酸盐与硫代亚磺酸盐等，这部分盐不能通过加热得到再生，统称为热稳态盐 （Heat Stable Salts,简称HSS）。热稳态盐的阴离子与胺结合，不能通过热再生方法回收溶剂胺，对酸性气体的吸收量随运行时间的增加而降低，需靠不断补充新鲜溶剂弥补吸收能力的下降。同时，因为热稳态盐的累积，使得溶剂的腐蚀性增强，而易引起胺液发泡，影响装置操作的安全性和稳定性，同时影响H2S的吸附效果
+            <p style="text-indent: 2em;font-size: 16px!important;">胺液脱硫系统因长期运行，系统内的降解产物及腐蚀产物不断累积。其中，胺液和酸性组分反应生成的盐，如盐酸盐、硫酸盐、甲酸盐、乙酸盐、草酸盐、硫氰酸盐与硫代亚磺酸盐等，这部分盐不能通过加热得到再生，统称为热稳态盐 （Heat Stable Salts,简称HSS）。热稳态盐的阴离子与胺结合，不能通过热再生方法回收溶剂胺，对酸性气体的吸收量随运行时间的增加而降低，需靠不断补充新鲜溶剂弥补吸收能力的下降。同时，因为热稳态盐的累积，使得溶剂的腐蚀性增强，而易引起胺液发泡，影响装置操作的安全性和稳定性，同时影响H2S的吸附效果
             </p>
             
-            <p style="text-indent: 2em;">一般在胺液脱硫系统之外，还需要再增加胺液净化系统，其净化技术的核心是通过浅层床高效离子交换工艺去除贫胺液中的热稳态盐，净化后的胺液返回到装置中。胺液净化设备由过滤器（保护树脂）、树脂床、配碱系统、水循环系统以及PLC控制系统等五部分组成。其中，胺液净化设备中的配碱系统，用于配制再生树脂所用碱液的同时，回收再生过程残留于树脂床的碱液，可减少碱液用量和废液的排放；水循环系统的增设，有利于减少水的消耗和带入胺液系统的水量。设备的关键操作为胺液净化和树脂再生。整个过程由再生回收、树脂再生、碱液回收、冲洗排放、冲洗回收、胺液净化、进料置换、冲洗回收、添加碱液等步骤组成。
+            <p style="text-indent: 2em;font-size: 16px!important;">一般在胺液脱硫系统之外，还需要再增加胺液净化系统，其净化技术的核心是通过浅层床高效离子交换工艺去除贫胺液中的热稳态盐，净化后的胺液返回到装置中。胺液净化设备由过滤器（保护树脂）、树脂床、配碱系统、水循环系统以及PLC控制系统等五部分组成。其中，胺液净化设备中的配碱系统，用于配制再生树脂所用碱液的同时，回收再生过程残留于树脂床的碱液，可减少碱液用量和废液的排放；水循环系统的增设，有利于减少水的消耗和带入胺液系统的水量。设备的关键操作为胺液净化和树脂再生。整个过程由再生回收、树脂再生、碱液回收、冲洗排放、冲洗回收、胺液净化、进料置换、冲洗回收、添加碱液等步骤组成。
             </p>
 
-            <p style="text-indent: 2em;">贫液过滤器是胺液脱硫系统保持清洁和连续运行的重要组成部分，一般分为三级过滤器，中间过滤器为活性炭滤芯过滤器，用于吸附烃类物质，使用寿命一般为一年。前后两级一般为微米级袋式过滤器。
+            <p style="text-indent: 2em;font-size: 16px!important;">贫液过滤器是胺液脱硫系统保持清洁和连续运行的重要组成部分，一般分为三级过滤器，中间过滤器为活性炭滤芯过滤器，用于吸附烃类物质，使用寿命一般为一年。前后两级一般为微米级袋式过滤器。
             </p>
 
             <div style="text-align:center;">
