--- a/feedback.html
+++ b/feedback.html
@@ -103,7 +103,7 @@
             当前位置:首页 >> 在线留言            
         </div>
         <div class="conNeiText">
-          <p style="text-indent:2em;font-size: 16px;">
+          <p style="text-indent:2em;font-size: 16px!important;">
             为了进一步改善我公司的各项服务，加强与客户之间的交流，我们真切的希望了解各位朋友的真实情况及对我公司服务提出宝贵的意见和建议，请将您的真实情况和想法告诉我们。以便我们改进，从而提供更优质的服务，我们会在72小时内给予回复。为确保反馈信息的及时性和有效性，请您填写正确的联系方式，谢谢您的支持和协助！
           </p>
                 
