--- a/food2.html
+++ b/food2.html
@@ -125,12 +125,12 @@
             <div style="text-align:center;">
               <img src="./image/food2-0.jpg" style="width: 80%;">
             </div>
-            <p style="text-indent: 2em;">淀粉糖的原料是淀粉，任何含淀粉的农作物，如玉米、大米、木薯等均可用来生产淀粉糖，生产不受地区和季节的限制。淀粉糖在口感、功能性上比蔗糖更能适应不同消费者的需要，并可改善食品的品质和加工性能。淀粉糖种类按成分组成来分大致可分为液体葡萄糖、结晶葡萄糖(全糖)、麦芽糖浆(饴糖、高麦芽糖浆、麦芽糖)、麦芽糊精、麦芽低聚糖、果葡糖浆等。
+            <p style="text-indent: 2em;font-size: 16px!important;">淀粉糖的原料是淀粉，任何含淀粉的农作物，如玉米、大米、木薯等均可用来生产淀粉糖，生产不受地区和季节的限制。淀粉糖在口感、功能性上比蔗糖更能适应不同消费者的需要，并可改善食品的品质和加工性能。淀粉糖种类按成分组成来分大致可分为液体葡萄糖、结晶葡萄糖(全糖)、麦芽糖浆(饴糖、高麦芽糖浆、麦芽糖)、麦芽糊精、麦芽低聚糖、果葡糖浆等。
             </p>
             <div style="text-align:center;">
               <img src="./image/food2-1.jpg" style="width: 80%;">
             </div>
-            <p style="text-indent: 2em;">淀粉糖的生产流程大致为“淀粉一调浆一液化一糖化一脱色一离子交换一真空浓缩”，活性炭用于吸附糖液中的色素及杂质，经活性炭脱色后的糖液含有少量无机盐和色素，需要离子交换树脂进一步处理。
+            <p style="text-indent: 2em;font-size: 16px!important;">淀粉糖的生产流程大致为“淀粉一调浆一液化一糖化一脱色一离子交换一真空浓缩”，活性炭用于吸附糖液中的色素及杂质，经活性炭脱色后的糖液含有少量无机盐和色素，需要离子交换树脂进一步处理。
             </p>
             <p class="clear"></p>
             <br>
