--- a/food3.html
+++ b/food3.html
@@ -125,12 +125,12 @@
             <div style="text-align:center;">
               <img src="./image/food3-0.jpg" style="width: 80%;">
             </div>
-            <p style="text-indent: 2em;">多环芳烃（PAH）是一类分子中含有两个以上苯环的碳氢化合物，由有机物质的不完全燃烧和高温分解产生，具有很强的致癌性。通常，油脂中含PAH主要有以下几种原因：烟熏烘干原料（椰子油、葵花油、橄榄油等），环境污染（菜籽油、鱼油），油轮、容器的污染（橄榄油、棕榈油）。
+            <p style="text-indent: 2em;font-size: 16px!important;">多环芳烃（PAH）是一类分子中含有两个以上苯环的碳氢化合物，由有机物质的不完全燃烧和高温分解产生，具有很强的致癌性。通常，油脂中含PAH主要有以下几种原因：烟熏烘干原料（椰子油、葵花油、橄榄油等），环境污染（菜籽油、鱼油），油轮、容器的污染（橄榄油、棕榈油）。
             </p>
 
-            <p style="text-indent: 2em;">食用油在生产过程中，经常会使用白土进行脱色。白土可以去除色素、皂、磷脂等杂质，但对于多环芳烃、二噁英的去除效果较差，此时需要使用活性炭进行进一步精炼。活性炭在使用时，可以与白土按一定比例混合直接过滤；也可以串联在白土吸附流程后面作二级处理。
+            <p style="text-indent: 2em;font-size: 16px!important;">食用油在生产过程中，经常会使用白土进行脱色。白土可以去除色素、皂、磷脂等杂质，但对于多环芳烃、二噁英的去除效果较差，此时需要使用活性炭进行进一步精炼。活性炭在使用时，可以与白土按一定比例混合直接过滤；也可以串联在白土吸附流程后面作二级处理。
             </p>
-            <p style="text-indent: 2em;">常用的油脂活性炭包括粉末炭和颗粒炭。因为吸附饱和的颗粒炭可进行再生处理，能降成本、减少环境污染，所以会得到越来越广泛的应用。
+            <p style="text-indent: 2em;font-size: 16px!important;">常用的油脂活性炭包括粉末炭和颗粒炭。因为吸附饱和的颗粒炭可进行再生处理，能降成本、减少环境污染，所以会得到越来越广泛的应用。
             </p>
 
             <div style="text-align:center;">
