--- a/food4.html
+++ b/food4.html
@@ -125,9 +125,9 @@
             <div style="text-align:center;">
               <img src="./image/food4-0.jpg" style="width: 80%;">
             </div>
-            <p style="text-indent: 2em;">活性炭产品在饮料行业有着广泛的应用，可以吸附产品中的杂质，实现以下效果：1.除异味；2除异臭；3、稳定颜色。此外，活性炭可以用于饮料用水，吸附水体中的消毒剂、农药和其他有机杂质，使饮料产品符合国际卫生标准。
+            <p style="text-indent: 2em;font-size: 16px!important;">活性炭产品在饮料行业有着广泛的应用，可以吸附产品中的杂质，实现以下效果：1.除异味；2除异臭；3、稳定颜色。此外，活性炭可以用于饮料用水，吸附水体中的消毒剂、农药和其他有机杂质，使饮料产品符合国际卫生标准。
             </p>
-            <p style="text-indent: 2em;">饮料工业既使用粉末活性炭，也使用颗粒活性炭，具体选择取决于生产过程。粉状活性炭一般用于批处理净化，颗粒活性炭适合连续加工。
+            <p style="text-indent: 2em;font-size: 16px!important;">饮料工业既使用粉末活性炭，也使用颗粒活性炭，具体选择取决于生产过程。粉状活性炭一般用于批处理净化，颗粒活性炭适合连续加工。
             </p>
 
             <p class="clear"></p>
