--- a/food5.html
+++ b/food5.html
@@ -125,15 +125,15 @@
             <div style="text-align:center;">
               <img src="./image/food5-0.jpg" style="width: 80%;">
             </div>
-            <p style="text-indent: 2em;">国外酿造行业，像威士忌、白兰地、伏特加、啤酒、葡萄酒、清酒及酒精饮料厂家常用活性炭来提高质量、改善风味；我国酒业对此应用也在逐步扩展。活性炭在改进酒品质方面有很多优良的效果：
+            <p style="text-indent: 2em;font-size: 16px!important;">国外酿造行业，像威士忌、白兰地、伏特加、啤酒、葡萄酒、清酒及酒精饮料厂家常用活性炭来提高质量、改善风味；我国酒业对此应用也在逐步扩展。活性炭在改进酒品质方面有很多优良的效果：
             </p>
-            <p style="text-indent: 2em;">（1）低度白酒除浊。在低度白酒生产中，因其中的高级脂肪酸乙酯、高级脂肪酸醇的溶解度降低，导致呈乳状浑浊，呈失光现象。因为乙酸乙酯是保持此类酒风味的关键，在吸附高级脂肪酸酯的同时要尽量减少乙酸乙酯的损失，所以选择对活性炭的选择需要慎重考虑。
+            <p style="text-indent: 2em;font-size: 16px!important;">（1）低度白酒除浊。在低度白酒生产中，因其中的高级脂肪酸乙酯、高级脂肪酸醇的溶解度降低，导致呈乳状浑浊，呈失光现象。因为乙酸乙酯是保持此类酒风味的关键，在吸附高级脂肪酸酯的同时要尽量减少乙酸乙酯的损失，所以选择对活性炭的选择需要慎重考虑。
             </p>
-            <p style="text-indent: 2em;">（2） 去除苦味和异味。白酒生产中由于发酵、蒸馏等操作不慎，使白酒有苦味。含氮的微孔发达的碱性酒类专用炭可有效地去除苦味；异味由于酿制过程控制不当，或对原料操作不妥，或来自采用液态发酵，或存在于刚蒸出的白酒，视情况需要选用不同孔隙结构的活性炭。
+            <p style="text-indent: 2em;font-size: 16px!important;">（2） 去除苦味和异味。白酒生产中由于发酵、蒸馏等操作不慎，使白酒有苦味。含氮的微孔发达的碱性酒类专用炭可有效地去除苦味；异味由于酿制过程控制不当，或对原料操作不妥，或来自采用液态发酵，或存在于刚蒸出的白酒，视情况需要选用不同孔隙结构的活性炭。
             </p>
-            <p style="text-indent: 2em;">（3）加速白酒的陈化、老熟。活性炭巨大的比表面积和丰富的官能团可以加快乙醇-乙醛-乙酸的过程，同时料液中的酸进一步与醇生成乙酸乙酯、高级脂肪酸酯，大幅缩短产品生产周期。
+            <p style="text-indent: 2em;font-size: 16px!important;">（3）加速白酒的陈化、老熟。活性炭巨大的比表面积和丰富的官能团可以加快乙醇-乙醛-乙酸的过程，同时料液中的酸进一步与醇生成乙酸乙酯、高级脂肪酸酯，大幅缩短产品生产周期。
             </p>
-            <p style="text-indent: 2em;">（4） 去除果酒中的果胶、啤酒中的沉淀物。
+            <p style="text-indent: 2em;font-size: 16px!important;">（4） 去除果酒中的果胶、啤酒中的沉淀物。
             </p>
             <p class="clear"></p>
 			      <br>
