--- a/food6.html
+++ b/food6.html
@@ -125,15 +125,15 @@
             <div style="text-align:center;">
               <img src="./image/food6-0.jpg" style="width: 80%;">
             </div>
-            <p style="text-indent: 2em;">乳酸学名为α-羟基丙酸，是一种多用途的精细化学品，可用于如酸味剂、调味剂、防腐剂、鞣制剂、植物生长调节剂、化妆品保湿剂、生物可降解材料和手性药物等。目前乳酸主要以发酵法生产，少部分以乳腈水解的化学合成法生产。其中发酵法可以通过菌种的筛选而选择性得到L-/DL-构型（L-型分子才具有生物活性及材料特性），而化学合成法一般只能得到DL-消旋体。如今随着可降解塑料的兴起，生物可降解聚乳酸塑料将会是一个广阔的市场，L-型乳酸将会有更大的市场需求。
+            <p style="text-indent: 2em;font-size: 16px!important;">乳酸学名为α-羟基丙酸，是一种多用途的精细化学品，可用于如酸味剂、调味剂、防腐剂、鞣制剂、植物生长调节剂、化妆品保湿剂、生物可降解材料和手性药物等。目前乳酸主要以发酵法生产，少部分以乳腈水解的化学合成法生产。其中发酵法可以通过菌种的筛选而选择性得到L-/DL-构型（L-型分子才具有生物活性及材料特性），而化学合成法一般只能得到DL-消旋体。如今随着可降解塑料的兴起，生物可降解聚乳酸塑料将会是一个广阔的市场，L-型乳酸将会有更大的市场需求。
             </p>
-            <p style="text-indent: 2em;">乳酸的发酵一般以玉米为原料，经过液化和糖化后，过滤得到糖液，然后在发酵罐中接入筛选的乳酸菌种，由于在酸性条件下菌类的作用会停止，故一般加入碳酸钙或氢氧化钙来调整pH（产物为水合型乳酸钙）。当发酵完成后，加热至90℃使溶液中的朊类沉淀出来，并过滤分离。
+            <p style="text-indent: 2em;font-size: 16px!important;">乳酸的发酵一般以玉米为原料，经过液化和糖化后，过滤得到糖液，然后在发酵罐中接入筛选的乳酸菌种，由于在酸性条件下菌类的作用会停止，故一般加入碳酸钙或氢氧化钙来调整pH（产物为水合型乳酸钙）。当发酵完成后，加热至90℃使溶液中的朊类沉淀出来，并过滤分离。
             </p>
-            <p style="text-indent: 2em;">乳酸钙可用多种方法净化．亦可转化成其他乳酸盐或乳酸。有一种方法是在乳酸钙经过滤除去朊类后加入活性炭除去杂色，然后过滤分离活性炭，并使溶液略呈酸性，再次使用活性炭处理。处理后的溶液经冷却析出乳酸钙结晶。将此结晶溶于65℃的水中，然后再用活性炭处理. 乳酸产品是由乳酸钙同硫酸作用产生，反应生产的硫酸钙经过滤除去，所得乳酸在加热条件下用活性炭脱色除杂，然后再经离子交换树脂吸附交换以除去一些金属离子。
+            <p style="text-indent: 2em;font-size: 16px!important;">乳酸钙可用多种方法净化．亦可转化成其他乳酸盐或乳酸。有一种方法是在乳酸钙经过滤除去朊类后加入活性炭除去杂色，然后过滤分离活性炭，并使溶液略呈酸性，再次使用活性炭处理。处理后的溶液经冷却析出乳酸钙结晶。将此结晶溶于65℃的水中，然后再用活性炭处理. 乳酸产品是由乳酸钙同硫酸作用产生，反应生产的硫酸钙经过滤除去，所得乳酸在加热条件下用活性炭脱色除杂，然后再经离子交换树脂吸附交换以除去一些金属离子。
             </p>
-            <p style="text-indent: 2em;">乳糖是哺乳动物乳汁中特有的一种双糖，乳糖由一分子葡萄糖和一分子半乳糖所构成。 
+            <p style="text-indent: 2em;font-size: 16px!important;">乳糖是哺乳动物乳汁中特有的一种双糖，乳糖由一分子葡萄糖和一分子半乳糖所构成。 
             </p>
-            <p style="text-indent: 2em;">在牛乳中含乳糖为4.6～4.7％，人乳中含乳糖为6～8％。乳糖的甜度是蔗糖的1/5。乳糖在食品工业中，用于作婴儿食品及炼乳品种。在医药工业中，用于药品的甜味剂和赋形剂；此外，还可作细菌培养基。 乳糖生产工艺流程: 乳清→加入石灰乳混合加热→沉淀过滤→蒸发浓缩→冷却晶体→分除母液→洗涤结晶→分除洗水→干燥→粗制乳糖→溶解→压滤→结晶→分除母液→洗涤→干燥→粉碎→筛选→包装。在制得粗制乳糖后，需要投加活性炭吸附糖液中的色素和杂质。
+            <p style="text-indent: 2em;font-size: 16px!important;">在牛乳中含乳糖为4.6～4.7％，人乳中含乳糖为6～8％。乳糖的甜度是蔗糖的1/5。乳糖在食品工业中，用于作婴儿食品及炼乳品种。在医药工业中，用于药品的甜味剂和赋形剂；此外，还可作细菌培养基。 乳糖生产工艺流程: 乳清→加入石灰乳混合加热→沉淀过滤→蒸发浓缩→冷却晶体→分除母液→洗涤结晶→分除洗水→干燥→粗制乳糖→溶解→压滤→结晶→分除母液→洗涤→干燥→粉碎→筛选→包装。在制得粗制乳糖后，需要投加活性炭吸附糖液中的色素和杂质。
             </p>
             <p class="clear"></p>
 			      <br>
