--- a/gas1.html
+++ b/gas1.html
@@ -143,9 +143,9 @@
             <div style="text-align:center;">
               <img src="./image/gas1-0.jpg" style="width: 60%;">
             </div>
-            <p style="text-indent: 2em;">乙烯作为催熟剂，在果蔬储藏环境中即使存在浓度较低，也会引发果蔬成熟老化。所以在果蔬采收后1-5天内，需要使用乙烯脱除剂来吸附环境中的乙烯。活性炭作为吸附剂，在使用时通常会分装成许多独立的小包装放置于果蔬的中层和上层。
+            <p style="text-indent: 2em;font-size: 16px!important;">乙烯作为催熟剂，在果蔬储藏环境中即使存在浓度较低，也会引发果蔬成熟老化。所以在果蔬采收后1-5天内，需要使用乙烯脱除剂来吸附环境中的乙烯。活性炭作为吸附剂，在使用时通常会分装成许多独立的小包装放置于果蔬的中层和上层。
             </p>
-            <p style="text-indent: 2em;">在气调贮藏过程中，因果蔬呼吸而放出的二氧化碳会使库内的二氧化碳浓度逐渐升高，当二氧化碳浓度过高，将导致果蔬产品二氧化碳中毒，产生一系列不良症状，最终使之腐烂变质，因此，高效的二氧化碳脱除设备是气调库必备设备。活性炭是此类设备常见的吸附剂，用来吸附固定CO2；采用一定的方式可以让CO2从活性炭表面解析，实现CO2的回收利用。
+            <p style="text-indent: 2em;font-size: 16px!important;">在气调贮藏过程中，因果蔬呼吸而放出的二氧化碳会使库内的二氧化碳浓度逐渐升高，当二氧化碳浓度过高，将导致果蔬产品二氧化碳中毒，产生一系列不良症状，最终使之腐烂变质，因此，高效的二氧化碳脱除设备是气调库必备设备。活性炭是此类设备常见的吸附剂，用来吸附固定CO2；采用一定的方式可以让CO2从活性炭表面解析，实现CO2的回收利用。
             </p>
             <p class="clear"></p>
             <br>
