--- a/gas10.html
+++ b/gas10.html
@@ -143,13 +143,13 @@
             <div style="text-align:center;">
               <img src="./image/gas10-0.jpg" style="width: 60%;">
             </div>
-            <p style="text-indent: 2em;">随着城市垃圾产量的大幅度增加和焚烧技术的不断发展，垃圾焚烧已经成为了很多国家大力发展的垃圾处理技术。城市生活垃圾焚烧会产生酸性气体、灰分、重金属和含氯有机物等有害物质。其中的二噁英类物质具有强致癌性，近年来引起了越来越多的关注。
+            <p style="text-indent: 2em;font-size: 16px!important;">随着城市垃圾产量的大幅度增加和焚烧技术的不断发展，垃圾焚烧已经成为了很多国家大力发展的垃圾处理技术。城市生活垃圾焚烧会产生酸性气体、灰分、重金属和含氯有机物等有害物质。其中的二噁英类物质具有强致癌性，近年来引起了越来越多的关注。
             </p>
-            <p style="text-indent: 2em;">二噁英是多氯代二苯并二噁英（PCDD或二噁英）和多氯代二苯并呋喃（PCDF或呋喃）的统称, 二噁英的毒性十分大，万分之一克的二噁英就会给人类健康带来严重的危害。这些危害包括软组织，肉瘤，淋巴瘤，皮肤损害（氯痤疮），胃癌，生物化学肝测试异常，高血脂，致命伤，免疫系统和神经副作用等。同时，二噁英化合物在环境和生物体内都具有稳定性，因此它对人类的影响是慢性而又广泛的。
+            <p style="text-indent: 2em;font-size: 16px!important;">二噁英是多氯代二苯并二噁英（PCDD或二噁英）和多氯代二苯并呋喃（PCDF或呋喃）的统称, 二噁英的毒性十分大，万分之一克的二噁英就会给人类健康带来严重的危害。这些危害包括软组织，肉瘤，淋巴瘤，皮肤损害（氯痤疮），胃癌，生物化学肝测试异常，高血脂，致命伤，免疫系统和神经副作用等。同时，二噁英化合物在环境和生物体内都具有稳定性，因此它对人类的影响是慢性而又广泛的。
             </p>
-            <p style="text-indent: 2em;">活性炭吸附二噁英的过程包括两个步骤：首先，将活性炭注射入废气流中；随后，在废气下游安置静电除尘器或者织物过滤器来移除使用后的活性炭和残余的灰尘。根据活性炭添加的方法，活性炭吸附二噁英过程可以分为三种不同的类型：携带流、移动床和固定床过程。在所有的过程中，废气中PCDD/F的移除都是通过碳的吸附完成的。
+            <p style="text-indent: 2em;font-size: 16px!important;">活性炭吸附二噁英的过程包括两个步骤：首先，将活性炭注射入废气流中；随后，在废气下游安置静电除尘器或者织物过滤器来移除使用后的活性炭和残余的灰尘。根据活性炭添加的方法，活性炭吸附二噁英过程可以分为三种不同的类型：携带流、移动床和固定床过程。在所有的过程中，废气中PCDD/F的移除都是通过碳的吸附完成的。
             </p>
-            <p style="text-indent: 2em;">活性炭吸附移除PCDD/F的效率通常比较高，在一个装配有旋风分离器，干石灰洗涤器和织物过滤器的生活垃圾焚烧炉中喷上活性炭可以在第一年将二噁英的移除效率从26.9%提高到96.6%。由于活性炭对二噁英的吸附效果良好，安装方便，技术简单，已经在垃圾焚烧厂中得到了广泛的应用。
+            <p style="text-indent: 2em;font-size: 16px!important;">活性炭吸附移除PCDD/F的效率通常比较高，在一个装配有旋风分离器，干石灰洗涤器和织物过滤器的生活垃圾焚烧炉中喷上活性炭可以在第一年将二噁英的移除效率从26.9%提高到96.6%。由于活性炭对二噁英的吸附效果良好，安装方便，技术简单，已经在垃圾焚烧厂中得到了广泛的应用。
             </p>
             <div style="text-align:center;">
               <img src="./image/gas10-1.jpg" style="width: 80%;">
