--- a/gas11.html
+++ b/gas11.html
@@ -143,9 +143,9 @@
             <div style="text-align:center;">
               <img src="./image/gas11-0.jpg" style="width: 60%;">
             </div>
-            <p style="text-indent: 2em;">PSA即变压吸附，是一项广泛应用于气体净化的技术，自20世纪60年代，市场上就引进了PSA技术，如今PSA已广泛应用于工业氧气、氮气以及氢气的生产和净化。20世纪60年代，市场上就引进了PSA技术，如今PSA已广泛应用于工业氧气、氮气以及氢气的生产和净化。
+            <p style="text-indent: 2em;font-size: 16px!important;">PSA即变压吸附，是一项广泛应用于气体净化的技术，自20世纪60年代，市场上就引进了PSA技术，如今PSA已广泛应用于工业氧气、氮气以及氢气的生产和净化。20世纪60年代，市场上就引进了PSA技术，如今PSA已广泛应用于工业氧气、氮气以及氢气的生产和净化。
             </p>
-            <p style="text-indent: 2em;">以氢气为例，首先含有杂质的进气会通过泵吸入容器，容器中装有吸附材料；进气中的杂质如二氧化碳会被吸附剂吸附，剩下氢气在容器中；容器中的压力下降，释放吸附材料中的杂质；成品氢气中的一小部分会用于推动废气至排气口，使容器处于净化待工状态。
+            <p style="text-indent: 2em;font-size: 16px!important;">以氢气为例，首先含有杂质的进气会通过泵吸入容器，容器中装有吸附材料；进气中的杂质如二氧化碳会被吸附剂吸附，剩下氢气在容器中；容器中的压力下降，释放吸附材料中的杂质；成品氢气中的一小部分会用于推动废气至排气口，使容器处于净化待工状态。
             </p>
             <div style="text-align:center;">
               <img src="./image/gas11-1.jpg" style="width: 80%;">
