--- a/gas13.html
+++ b/gas13.html
@@ -143,12 +143,12 @@
             <div style="text-align:center;">
               <img src="./image/gas13-0.jpg" style="width: 60%;">
             </div>
-            <p style="text-indent: 2em;">碳罐即一个填充了活性炭的罐子，用于收集汽油蒸汽并二次利用的装置，一般装在汽油箱和发动机之间。由于汽油是一种易挥发的液体，在常温下燃油箱经常充满蒸气，最早人们将油箱盖做成泄压阀形式，当油箱内压力超过一定值后泄压阀打开，汽油蒸汽被直接排放到空气中，后来为节约汽油，人们设计了汽油蒸发控制系统（EVAP），其作用是将蒸气引入燃烧并防止挥发到大气中，这个过程起重要作用的是活性碳罐贮存装置。
+            <p style="text-indent: 2em;font-size: 16px!important;">碳罐即一个填充了活性炭的罐子，用于收集汽油蒸汽并二次利用的装置，一般装在汽油箱和发动机之间。由于汽油是一种易挥发的液体，在常温下燃油箱经常充满蒸气，最早人们将油箱盖做成泄压阀形式，当油箱内压力超过一定值后泄压阀打开，汽油蒸汽被直接排放到空气中，后来为节约汽油，人们设计了汽油蒸发控制系统（EVAP），其作用是将蒸气引入燃烧并防止挥发到大气中，这个过程起重要作用的是活性碳罐贮存装置。
             </p>
             <div style="text-align:center;">
               <img src="./image/gas13-1.jpg" style="width: 30%;">
             </div>
-            <p style="text-indent: 2em;">碳罐内部一般由丁烷吸附力极强的柱状活性炭填充，油箱中多余的燃油蒸汽不再排到大气中，而是有一根管子引入活性碳罐。发动机熄火后，汽油自然挥发形成汽油蒸汽，通过管道进入碳罐挥发区并立即被活性碳吸附冷凝为汽油；当发动机启动后，装在活性碳罐与进气歧管之间的电磁阀门打开，活性碳罐内的汽油在进气管的真空度作用下，被洁净空气带入气缸内参加燃烧，此时活性炭因为发动机的抽吸作用得到还原。
+            <p style="text-indent: 2em;font-size: 16px!important;">碳罐内部一般由丁烷吸附力极强的柱状活性炭填充，油箱中多余的燃油蒸汽不再排到大气中，而是有一根管子引入活性碳罐。发动机熄火后，汽油自然挥发形成汽油蒸汽，通过管道进入碳罐挥发区并立即被活性碳吸附冷凝为汽油；当发动机启动后，装在活性碳罐与进气歧管之间的电磁阀门打开，活性碳罐内的汽油在进气管的真空度作用下，被洁净空气带入气缸内参加燃烧，此时活性炭因为发动机的抽吸作用得到还原。
             </p>
             <p class="clear"></p>
             <br>
