--- a/gas2.html
+++ b/gas2.html
@@ -143,23 +143,23 @@
             <div style="text-align:center;">
               <img src="./image/gas2-0.jpg" style="width: 60%;">
             </div>
-            <p style="text-indent: 2em;">加油站油气回收主要有一次、二次、三次油气回收，是指在装卸汽油和给车辆加油的过程中，将挥发的汽油油气收集起来，通过吸收、吸附或冷凝等工艺，使油气从气态转变为液态重新变为汽油的过程。
+            <p style="text-indent: 2em;font-size: 16px!important;">加油站油气回收主要有一次、二次、三次油气回收，是指在装卸汽油和给车辆加油的过程中，将挥发的汽油油气收集起来，通过吸收、吸附或冷凝等工艺，使油气从气态转变为液态重新变为汽油的过程。
             </p>
-            <p style="text-indent: 2em;">一次回收是油罐车卸油的时候，在实施了油气污染回收治理的加油站，地下油罐多了一个管口，在卸油时，这个管口连接油罐车油气回收管，油气就会被抽到油罐车内。
+            <p style="text-indent: 2em;font-size: 16px!important;">一次回收是油罐车卸油的时候，在实施了油气污染回收治理的加油站，地下油罐多了一个管口，在卸油时，这个管口连接油罐车油气回收管，油气就会被抽到油罐车内。
             </p>
-            <p style="text-indent: 2em;">二次回收发生在给汽车加油的时候。加油机内部安装了一台油气回收真空泵及油气回收管道。看加油枪底部安装的像口罩的一个套子，这个是回气罩。在给汽车加油时，回气罩正好将油箱口扣上，可防止油箱内的油气向外溢出。同时，在枪管根部还有一圈小孔，是油气回收孔。加油时，真空泵将油箱中的油气通过回收孔抽回到地下油罐中。
+            <p style="text-indent: 2em;font-size: 16px!important;">二次回收发生在给汽车加油的时候。加油机内部安装了一台油气回收真空泵及油气回收管道。看加油枪底部安装的像口罩的一个套子，这个是回气罩。在给汽车加油时，回气罩正好将油箱口扣上，可防止油箱内的油气向外溢出。同时，在枪管根部还有一圈小孔，是油气回收孔。加油时，真空泵将油箱中的油气通过回收孔抽回到地下油罐中。
             </p>
-            <p style="text-indent: 2em;">这两次回收，油气将被带回油库进行统一集中处理。
+            <p style="text-indent: 2em;font-size: 16px!important;">这两次回收，油气将被带回油库进行统一集中处理。
             </p>
-            <p style="text-indent: 2em;">而三次油气回收是指一个加油站汽油年销售量达到8000吨以上的话，需要安装一台冷凝设备，采取低温、低压的方式在加油站将油气直接冷凝成汽油回到油罐。这样一来，三次油气回收不仅大大减少了排入大气环境中的有害物质，具有改善环境空气质量的生态效益，还能将油气再利用，带来一定的经济效益。
+            <p style="text-indent: 2em;font-size: 16px!important;">而三次油气回收是指一个加油站汽油年销售量达到8000吨以上的话，需要安装一台冷凝设备，采取低温、低压的方式在加油站将油气直接冷凝成汽油回到油罐。这样一来，三次油气回收不仅大大减少了排入大气环境中的有害物质，具有改善环境空气质量的生态效益，还能将油气再利用，带来一定的经济效益。
             </p>
-            <p style="text-indent: 2em;">活性炭吸附法是油气回收的主要工艺之一，上世纪70年代在美国开始应用，现已在世界范围内广泛使用，该流程相对简单并且回收效率很高，其原理是利用油气混合物中各组分与吸附剂(活性炭)之间结合力强弱的差别，使混合物中难吸附与易吸附组分分离，其中的烃类被吸附剂吸附。吸附过程在常温常压下进行，吸附剂达到一定的饱和度后，需进行再生，再生过程中脱附出的油气再用油品进行吸收，即回收过程分三步进行： 
+            <p style="text-indent: 2em;font-size: 16px!important;">活性炭吸附法是油气回收的主要工艺之一，上世纪70年代在美国开始应用，现已在世界范围内广泛使用，该流程相对简单并且回收效率很高，其原理是利用油气混合物中各组分与吸附剂(活性炭)之间结合力强弱的差别，使混合物中难吸附与易吸附组分分离，其中的烃类被吸附剂吸附。吸附过程在常温常压下进行，吸附剂达到一定的饱和度后，需进行再生，再生过程中脱附出的油气再用油品进行吸收，即回收过程分三步进行： 
             </p>
-            <p style="text-indent: 2em;">第一步吸附，从公路运输槽车加油区密闭收集油气，经管道低压输入吸附塔内，油气中约 99％的油蒸气被塔内的活性炭吸附，空气等其他气体排入大气。吸附过程不发生化学反应 。 
+            <p style="text-indent: 2em;font-size: 16px!important;">第一步吸附，从公路运输槽车加油区密闭收集油气，经管道低压输入吸附塔内，油气中约 99％的油蒸气被塔内的活性炭吸附，空气等其他气体排入大气。吸附过程不发生化学反应 。 
             </p>
-            <p style="text-indent: 2em;">第二步脱附，当吸附剂吸附饱和(或基本饱和)之后，开启干式真空泵及压缩机，用真空法对吸附塔内的活性炭床进行脱附，获得高浓度的油蒸气，油蒸气经压缩送入吸收塔，经过脱附的活性炭恢复原有功能，具备执行下一次油气吸附能力 。
+            <p style="text-indent: 2em;font-size: 16px!important;">第二步脱附，当吸附剂吸附饱和(或基本饱和)之后，开启干式真空泵及压缩机，用真空法对吸附塔内的活性炭床进行脱附，获得高浓度的油蒸气，油蒸气经压缩送入吸收塔，经过脱附的活性炭恢复原有功能，具备执行下一次油气吸附能力 。
             </p>
-            <p style="text-indent: 2em;">第三步吸收，油蒸气进入吸收塔后， 在填料层与汽油吸收剂进行逆向流动，绝大部分油蒸气被喷淋塔内的汽油 (来自于储油罐) 溶解吸收，变为液态汽油，少量未被溶解的油蒸气， 经管道送入吸附塔内再次进行吸附。
+            <p style="text-indent: 2em;font-size: 16px!important;">第三步吸收，油蒸气进入吸收塔后， 在填料层与汽油吸收剂进行逆向流动，绝大部分油蒸气被喷淋塔内的汽油 (来自于储油罐) 溶解吸收，变为液态汽油，少量未被溶解的油蒸气， 经管道送入吸附塔内再次进行吸附。
             </p>
             <div style="text-align:center;">
               <img src="./image/gas2-1.jpg" style="width: 80%;">
