--- a/gas3.html
+++ b/gas3.html
@@ -143,13 +143,13 @@
             <div style="text-align:center;">
               <img src="./image/gas3-0.jpg" style="width: 60%;">
             </div>
-            <p style="text-indent: 2em;">在工业生产中，最常用的溶剂即有机溶剂，除广泛用于清洗、去污、稀释和萃取等过程外，很多有机溶剂也作为中间体用于化学合成。常用的溶剂有石油醚、甲苯、乙酸乙酯、甲基叔丁基醚、二氯甲烷、醇类、二硫化碳、丙酮等。有机溶剂使用广泛而且用量巨大，如果只是一次性使用，将会造成资源浪费和环境的破坏，因此需要对溶剂进行回收以循环利用，目前溶剂回收主要有如下几种方式，如活性炭吸附法、吸收法、冷凝法和膜分离法。其中活性炭吸附法因为操作简单，运行成本低廉，目前是使用范围较广的一种方式，尤其对苯、乙酸乙酯、氯仿、四氯化碳等非极性溶剂，活性炭吸附有非常好的效果。
+            <p style="text-indent: 2em;font-size: 16px!important;">在工业生产中，最常用的溶剂即有机溶剂，除广泛用于清洗、去污、稀释和萃取等过程外，很多有机溶剂也作为中间体用于化学合成。常用的溶剂有石油醚、甲苯、乙酸乙酯、甲基叔丁基醚、二氯甲烷、醇类、二硫化碳、丙酮等。有机溶剂使用广泛而且用量巨大，如果只是一次性使用，将会造成资源浪费和环境的破坏，因此需要对溶剂进行回收以循环利用，目前溶剂回收主要有如下几种方式，如活性炭吸附法、吸收法、冷凝法和膜分离法。其中活性炭吸附法因为操作简单，运行成本低廉，目前是使用范围较广的一种方式，尤其对苯、乙酸乙酯、氯仿、四氯化碳等非极性溶剂，活性炭吸附有非常好的效果。
             </p>
-            <p style="text-indent: 2em;">溶剂回收用的活性炭吸附装置，一般可以分为固定床、移动床和流化床三种形式，由于固定床运转稳定，操作简单，得到了广泛的应用。
+            <p style="text-indent: 2em;font-size: 16px!important;">溶剂回收用的活性炭吸附装置，一般可以分为固定床、移动床和流化床三种形式，由于固定床运转稳定，操作简单，得到了广泛的应用。
             </p>
-            <p style="text-indent: 2em;">经过加热含有溶剂的混合气体，通入装填有活性炭的固定床反应器后，依靠活性炭孔径的选择性吸附能力，将溶剂吸附在活性炭微孔内，其余气体经反应器另一端流出；待活性炭吸附饱和后，一般用水蒸气再生法脱除吸附的溶剂进行回收，而再生后的活性炭经干燥冷却后再循环使用。整个装置一般采用两个以上的反应器交替使用。较大规模的吸附系统采用的通常流程为变温吸附法和变压吸附法流程，既可有效脱除有机污染物又可回收有用组分。
+            <p style="text-indent: 2em;font-size: 16px!important;">经过加热含有溶剂的混合气体，通入装填有活性炭的固定床反应器后，依靠活性炭孔径的选择性吸附能力，将溶剂吸附在活性炭微孔内，其余气体经反应器另一端流出；待活性炭吸附饱和后，一般用水蒸气再生法脱除吸附的溶剂进行回收，而再生后的活性炭经干燥冷却后再循环使用。整个装置一般采用两个以上的反应器交替使用。较大规模的吸附系统采用的通常流程为变温吸附法和变压吸附法流程，既可有效脱除有机污染物又可回收有用组分。
             </p>
-            <p style="text-indent: 2em;">我国已在印刷、涂料、橡胶、胶片、造纸等很多行业成功应用了活性炭吸附技术进行溶剂回收，普遍采用活性炭间歇固定床回收技术，一般选用价格相对便宜的煤质颗粒或柱状碳。
+            <p style="text-indent: 2em;font-size: 16px!important;">我国已在印刷、涂料、橡胶、胶片、造纸等很多行业成功应用了活性炭吸附技术进行溶剂回收，普遍采用活性炭间歇固定床回收技术，一般选用价格相对便宜的煤质颗粒或柱状碳。
             </p>
 
             <div style="text-align:center;">
