--- a/gas5.html
+++ b/gas5.html
@@ -143,11 +143,11 @@
             <div style="text-align:center;">
               <img src="./image/gas5-0.jpg" style="width: 60%;">
             </div>
-            <p style="text-indent: 2em;">二氧化碳是啤酒生产过程中的一种重要原料，在啤酒发酵过程中会产生大量的二氧化碳，同时在啤酒生产中又需要大量的二氧化碳作为原料。作为啤酒厂，二氧化碳的回收和使用平衡问题是做好节约能源和循环经济的重要部分。如果二氧化碳回收率低、回收使用不平衡，会导致在啤酒发酵过程中产生的大量高纯度二氧化碳气体白白排放到大气中，所以二氧化碳的回收和使用的平衡系统十分必要。
+            <p style="text-indent: 2em;font-size: 16px!important;">二氧化碳是啤酒生产过程中的一种重要原料，在啤酒发酵过程中会产生大量的二氧化碳，同时在啤酒生产中又需要大量的二氧化碳作为原料。作为啤酒厂，二氧化碳的回收和使用平衡问题是做好节约能源和循环经济的重要部分。如果二氧化碳回收率低、回收使用不平衡，会导致在啤酒发酵过程中产生的大量高纯度二氧化碳气体白白排放到大气中，所以二氧化碳的回收和使用的平衡系统十分必要。
             </p>
-            <p style="text-indent: 2em;">传统的二氧化碳回收工艺包括二氧化碳压缩单元、干燥单元、除臭单元、汽化单元
+            <p style="text-indent: 2em;font-size: 16px!important;">传统的二氧化碳回收工艺包括二氧化碳压缩单元、干燥单元、除臭单元、汽化单元
             </p>
-            <p style="text-indent: 2em;">在除臭单元的过滤器内，需要装有活性炭，顶部、底部各有一个滤网，避免二氧化碳气体流动时活性炭流失。 用于吸附二氧化碳气体中残余的有机物（酒精）及异味。当一个过滤器吸附饱和后，用低压蒸汽（或自动控制电加热器）再生。
+            <p style="text-indent: 2em;font-size: 16px!important;">在除臭单元的过滤器内，需要装有活性炭，顶部、底部各有一个滤网，避免二氧化碳气体流动时活性炭流失。 用于吸附二氧化碳气体中残余的有机物（酒精）及异味。当一个过滤器吸附饱和后，用低压蒸汽（或自动控制电加热器）再生。
             </p>
 
             <div style="text-align:center;">
