--- a/gas6.html
+++ b/gas6.html
@@ -143,9 +143,9 @@
             <div style="text-align:center;">
               <img src="./image/gas6-0.jpg" style="width: 40%;">
             </div>
-            <p style="text-indent: 2em;">过滤嘴是指卷烟的上面部分，是专门为吸烟人士设计的一种工具，它能够减少吸烟时入口的烟雾、焦油和燃烧时产生的悬浮粒子。 
+            <p style="text-indent: 2em;font-size: 16px!important;">过滤嘴是指卷烟的上面部分，是专门为吸烟人士设计的一种工具，它能够减少吸烟时入口的烟雾、焦油和燃烧时产生的悬浮粒子。 
             </p>
-            <p style="text-indent: 2em;">香烟因烟草的不完全燃烧会产生大量有害物质，通过在香烟过滤嘴中添加活性炭，可利用活性炭的微孔吸附，大大减少这些有害物质的吸入，并改善卷烟的吸味。
+            <p style="text-indent: 2em;font-size: 16px!important;">香烟因烟草的不完全燃烧会产生大量有害物质，通过在香烟过滤嘴中添加活性炭，可利用活性炭的微孔吸附，大大减少这些有害物质的吸入，并改善卷烟的吸味。
             </p>
             <p class="clear"></p>
             <br>
