--- a/gas7.html
+++ b/gas7.html
@@ -143,9 +143,9 @@
             <div style="text-align:center;">
               <img src="./image/gas7-0.jpg" style="width: 80%;">
             </div>
-            <p style="text-indent: 2em;">天然气中都含有微量的汞，不同油田汞含量的差异很大，汞具有高挥发性、高毒性和强腐蚀性，还会引起天然气工业中的催化剂中毒。
+            <p style="text-indent: 2em;font-size: 16px!important;">天然气中都含有微量的汞，不同油田汞含量的差异很大，汞具有高挥发性、高毒性和强腐蚀性，还会引起天然气工业中的催化剂中毒。
             </p>
-            <p style="text-indent: 2em;">现在国内采用的是载硫活性炭的脱汞工艺，活性炭作为一种载体，使反应物（一般为硫）能够有效均匀分布其中，活性炭较大的比表面积也促进了反应物对汞的吸收。天然气中的汞主要是汞单质，与活性炭中的硫反应生成硫化汞，硫化汞停留在活性炭载体中，从而实现了单质汞与天然气的分离。  
+            <p style="text-indent: 2em;font-size: 16px!important;">现在国内采用的是载硫活性炭的脱汞工艺，活性炭作为一种载体，使反应物（一般为硫）能够有效均匀分布其中，活性炭较大的比表面积也促进了反应物对汞的吸收。天然气中的汞主要是汞单质，与活性炭中的硫反应生成硫化汞，硫化汞停留在活性炭载体中，从而实现了单质汞与天然气的分离。  
             </p>
             <p class="clear"></p>
             <br>
