--- a/gas8.html
+++ b/gas8.html
@@ -146,15 +146,15 @@
             <div style="text-align:center;">
               <img src="./image/gas8-0.jpg" style="width: 60%;">
             </div>
-            <p style="text-indent: 2em;">在下水道及垃圾填埋的生物降解中，会产生沼气，其主要成分为甲烷和二氧化碳，还有少量硫化氢即硅氧烷。
+            <p style="text-indent: 2em;font-size: 16px!important;">在下水道及垃圾填埋的生物降解中，会产生沼气，其主要成分为甲烷和二氧化碳，还有少量硫化氢即硅氧烷。
             </p>
-            <p style="text-indent: 2em;">沼气经处理收集后，通过压缩机加压输送至内燃机组，经燃烧转化成电能传输到电力升压站，输送到当地电网供用户使用；也可作为运输工具的动力燃料；同时经脱水净化处理后作为管道气体，应用于二氧化碳工业或用于生产甲醇的燃料等。
+            <p style="text-indent: 2em;font-size: 16px!important;">沼气经处理收集后，通过压缩机加压输送至内燃机组，经燃烧转化成电能传输到电力升压站，输送到当地电网供用户使用；也可作为运输工具的动力燃料；同时经脱水净化处理后作为管道气体，应用于二氧化碳工业或用于生产甲醇的燃料等。
             </p>
-            <p style="text-indent: 2em;">由于沼气主要是经生物代谢产生，同时一些生活用品如化妆品/清洁产品中也含有一些含硅产品，因此沼气中也含有H2S及硅氧烷气体。
+            <p style="text-indent: 2em;font-size: 16px!important;">由于沼气主要是经生物代谢产生，同时一些生活用品如化妆品/清洁产品中也含有一些含硅产品，因此沼气中也含有H2S及硅氧烷气体。
             </p>
-            <p style="text-indent: 2em;">沼气中的水分和硫化氢的共同作用会产生硫酸，会导致阀门及流量计的腐蚀，同时也会造成大气污染；而燃烧含挥发性硅氧烷的沼气会在内燃机内壁表面产生二氧化硅层，而这层覆盖层将缩短发动机的使用时间。因此沼气在使用前需要脱除水分/H2S/硅氧烷等气体。
+            <p style="text-indent: 2em;font-size: 16px!important;">沼气中的水分和硫化氢的共同作用会产生硫酸，会导致阀门及流量计的腐蚀，同时也会造成大气污染；而燃烧含挥发性硅氧烷的沼气会在内燃机内壁表面产生二氧化硅层，而这层覆盖层将缩短发动机的使用时间。因此沼气在使用前需要脱除水分/H2S/硅氧烷等气体。
             </p>
-            <p style="text-indent: 2em;">由于活性炭可同时脱除H2S及硅氧烷，因此一般在沼气的前置净化中，会安装活性炭碳罐，用于H2S及硅氧烷的去除。
+            <p style="text-indent: 2em;font-size: 16px!important;">由于活性炭可同时脱除H2S及硅氧烷，因此一般在沼气的前置净化中，会安装活性炭碳罐，用于H2S及硅氧烷的去除。
             </p>
             
             <div style="text-align:center;">
