--- a/gas9.html
+++ b/gas9.html
@@ -146,9 +146,9 @@
             <div style="text-align:center;">
               <img src="./image/gas9-0.jpg" style="width: 60%;">
             </div>
-            <p style="text-indent: 2em;">我国大部分火电厂面临着加强控制SO2 和NOX排放问题。目前限制推广脱硫脱氮技术的主要因素是初投资大、运行费用高、治污产物利用难、存在一定程度的二次污染。活性炭吸附法脱硫脱氮技术具有能够实现治污产物资源化利用,脱硫脱氮效率高等优点，被认为是一种有发展前景的脱硫脱氮技术。 
+            <p style="text-indent: 2em;font-size: 16px!important;">我国大部分火电厂面临着加强控制SO2 和NOX排放问题。目前限制推广脱硫脱氮技术的主要因素是初投资大、运行费用高、治污产物利用难、存在一定程度的二次污染。活性炭吸附法脱硫脱氮技术具有能够实现治污产物资源化利用,脱硫脱氮效率高等优点，被认为是一种有发展前景的脱硫脱氮技术。 
             </p>
-            <p style="text-indent: 2em;">活性炭材料本身具有非极性、疏水性、较高的化学稳定性和热稳定性，可进行活化和改进性，加上它的催化能力、负载性能和还原性能以及独特的孔隙结构和表面化学特性，这就决定了活性炭作为一种脱硫脱硝剂具有非常好的先天条件；在各种烟气治理方法中,活性炭吸附法是唯一一种能脱除烟气中每一种杂质的方法，其中包括SO2、氮氧化物、烟尘粒子、汞、二噁英、呋喃、重金属、挥发分有机物及其他微量元素。
+            <p style="text-indent: 2em;font-size: 16px!important;">活性炭材料本身具有非极性、疏水性、较高的化学稳定性和热稳定性，可进行活化和改进性，加上它的催化能力、负载性能和还原性能以及独特的孔隙结构和表面化学特性，这就决定了活性炭作为一种脱硫脱硝剂具有非常好的先天条件；在各种烟气治理方法中,活性炭吸附法是唯一一种能脱除烟气中每一种杂质的方法，其中包括SO2、氮氧化物、烟尘粒子、汞、二噁英、呋喃、重金属、挥发分有机物及其他微量元素。
             </p>   
             <div style="text-align:center;">
               <img src="./image/gas9-1.jpg" style="width: 80%;">
