--- a/medicine1.html
+++ b/medicine1.html
@@ -128,13 +128,13 @@
             <div style="text-align:center;">
               <img src="./image/medicine1-0.jpg" style="width: 80%;">
             </div>
-            <p style="text-indent: 2em;">维生素是人们身体健康必不可少的元素，对机体的新陈代谢、生长、发育、健康有极重要作用。维生素均以维生素原的形式存在于食物中，大多数的维生素，机体不能合成或合成量不足，不能满足机体的需要，必须经常通过食物中获得。
+            <p style="text-indent: 2em;font-size: 16px!important;">维生素是人们身体健康必不可少的元素，对机体的新陈代谢、生长、发育、健康有极重要作用。维生素均以维生素原的形式存在于食物中，大多数的维生素，机体不能合成或合成量不足，不能满足机体的需要，必须经常通过食物中获得。
             </p>
-            <p style="text-indent: 2em;">维生素目前有维生素A，B1，B2，PP，B4，B5，B6，H（生物素），B9或M（叶酸），B12，肌醇，C、D、E、K1、K2、K3、K4等。   
+            <p style="text-indent: 2em;font-size: 16px!important;">维生素目前有维生素A，B1，B2，PP，B4，B5，B6，H（生物素），B9或M（叶酸），B12，肌醇，C、D、E、K1、K2、K3、K4等。   
             </p>
-            <p style="text-indent: 2em;">维生素的生产多采用化学合成法，后来人们发现某些微生物可以完成维生素合成中的某些重要步骤；在此基础上，化学合成与生物转化相结合的半合成法在维生素生产中得到了广泛应用，目前可以用发酵法或半合成法生产的维生素有VC、VB2、VB12、VD、以及β-胡萝卜素(可在生物体内转化为维生素A)等。
+            <p style="text-indent: 2em;font-size: 16px!important;">维生素的生产多采用化学合成法，后来人们发现某些微生物可以完成维生素合成中的某些重要步骤；在此基础上，化学合成与生物转化相结合的半合成法在维生素生产中得到了广泛应用，目前可以用发酵法或半合成法生产的维生素有VC、VB2、VB12、VD、以及β-胡萝卜素(可在生物体内转化为维生素A)等。
             </p>
-            <p style="text-indent: 2em;">无论是化学法还是发酵法，在生产过程中会引入一些有颜色的杂质，一般通过活性炭来进行脱色抛光。如Basf的维生素A合成工艺中，最后一步C15（棕色）与C5醛合成反应后得到粗品为棕色油状物，需要经过乙醇溶解后加入活性炭在55℃左右脱色，过滤分离后冷却结晶得到淡黄色成品。
+            <p style="text-indent: 2em;font-size: 16px!important;">无论是化学法还是发酵法，在生产过程中会引入一些有颜色的杂质，一般通过活性炭来进行脱色抛光。如Basf的维生素A合成工艺中，最后一步C15（棕色）与C5醛合成反应后得到粗品为棕色油状物，需要经过乙醇溶解后加入活性炭在55℃左右脱色，过滤分离后冷却结晶得到淡黄色成品。
             </p>
                                                            
             
