--- a/medicine2.html
+++ b/medicine2.html
@@ -128,15 +128,15 @@
             <div style="text-align:center;">
               <img src="./image/medicine2-0.jpg" style="width: 80%;">
             </div>
-            <p style="text-indent: 2em;">酶制剂是指从生物(包括动物、植物、微生物)中提取的具有生物催化能力的物质，辅以其他成分，用于加速食品加工过程和提高食品产品质量的制品。工业上应用的酶制剂大多数为水解酶，按作用底物的不同，又可分为淀粉酶、蛋白酶、脂肪酶、果胶酶、木聚糖酶、β-葡聚糖酶、纤维素酶、植酸酶、核糖核酸酶等。
+            <p style="text-indent: 2em;font-size: 16px!important;">酶制剂是指从生物(包括动物、植物、微生物)中提取的具有生物催化能力的物质，辅以其他成分，用于加速食品加工过程和提高食品产品质量的制品。工业上应用的酶制剂大多数为水解酶，按作用底物的不同，又可分为淀粉酶、蛋白酶、脂肪酶、果胶酶、木聚糖酶、β-葡聚糖酶、纤维素酶、植酸酶、核糖核酸酶等。
             </p>
-            <p style="text-indent: 2em;">在食品工业方面，葡萄糖可先用α-淀粉酶对淀粉进行液化，再用糖化型淀粉酶进行糖化；果糖和葡萄糖混合糖浆，则是由淀粉酶和葡萄糖异构酶的联合作用；果胶酶用于澄清果汁，去除果汁中悬浮果胶；花青素酶用于切断有色花青素中的葡萄糖，生成无色化合物，在葡萄汁和桃子汁制造中脱色有很好的效果；在乳制品行业，需要用酶制剂发酵得到乳酸；在面包行业，α-淀粉酶制剂的添加能加快酵母的发酵速度，蛋白酶制剂的添加能增加面包的体积同时保持纹理，脂肪氧化酶和乳糖酶制剂的添加能除去面粉中的天然色素，同时增加弹性。
+            <p style="text-indent: 2em;font-size: 16px!important;">在食品工业方面，葡萄糖可先用α-淀粉酶对淀粉进行液化，再用糖化型淀粉酶进行糖化；果糖和葡萄糖混合糖浆，则是由淀粉酶和葡萄糖异构酶的联合作用；果胶酶用于澄清果汁，去除果汁中悬浮果胶；花青素酶用于切断有色花青素中的葡萄糖，生成无色化合物，在葡萄汁和桃子汁制造中脱色有很好的效果；在乳制品行业，需要用酶制剂发酵得到乳酸；在面包行业，α-淀粉酶制剂的添加能加快酵母的发酵速度，蛋白酶制剂的添加能增加面包的体积同时保持纹理，脂肪氧化酶和乳糖酶制剂的添加能除去面粉中的天然色素，同时增加弹性。
             </p>
-            <p style="text-indent: 2em;">在啤酒、葡萄酒、酒精、黄酒等酿造过程中，都需要添加酶制剂来增强风味，提到稳定性，如蛋白酶制剂的添加可防止成品酒发生蛋白质混浊，淀粉酶的添加可以加快发酵的速度等。
+            <p style="text-indent: 2em;font-size: 16px!important;">在啤酒、葡萄酒、酒精、黄酒等酿造过程中，都需要添加酶制剂来增强风味，提到稳定性，如蛋白酶制剂的添加可防止成品酒发生蛋白质混浊，淀粉酶的添加可以加快发酵的速度等。
             </p>
-            <p style="text-indent: 2em;">在医药领域，可用酶进行疾病的诊断，治疗各种疾病，制造各种药物等，如利用胃蛋白酶、胰蛋白酶、胰脂肪酶、胰淀粉酶等助消化；用青霉素酰化酶合成各种新型的β − 内酰胺抗生素，包括青霉素和头孢霉素；用β-酪氨酸酶生产多巴（DOPA）；用蛋白酶生产各种氨基酸和蛋白质水解液；用核糖核酸酶生产核苷酸类物质等等。
+            <p style="text-indent: 2em;font-size: 16px!important;">在医药领域，可用酶进行疾病的诊断，治疗各种疾病，制造各种药物等，如利用胃蛋白酶、胰蛋白酶、胰脂肪酶、胰淀粉酶等助消化；用青霉素酰化酶合成各种新型的β − 内酰胺抗生素，包括青霉素和头孢霉素；用β-酪氨酸酶生产多巴（DOPA）；用蛋白酶生产各种氨基酸和蛋白质水解液；用核糖核酸酶生产核苷酸类物质等等。
             </p>
-            <p style="text-indent: 2em;">酶制剂通过发酵得到大量菌种，发酵结束后，发酵液采用活性炭进行脱色，脱色后经过板框过滤，再经过超滤循环，得到液体酶制剂。一般活性炭的添加量为1%。
+            <p style="text-indent: 2em;font-size: 16px!important;">酶制剂通过发酵得到大量菌种，发酵结束后，发酵液采用活性炭进行脱色，脱色后经过板框过滤，再经过超滤循环，得到液体酶制剂。一般活性炭的添加量为1%。
             </p>          
 
             <div style="text-align:center;">
