--- a/medicine3.html
+++ b/medicine3.html
@@ -128,9 +128,9 @@
             <div style="text-align:center;">
               <img src="./image/medicine3-0.jpg" style="width: 50%;">
             </div>
-            <p style="text-indent: 2em;">青霉素与头孢菌素同属于抗生素，而抗生素在目前的制药工业中仍占有举足轻重的地位，尤其是下游半合成工艺的发展，带动了整体的工业生产规模，其中包括有β-内酰胺类的青霉素与头孢菌素C，也包括大环酯类的红霉素、利福霉素，氨基环醇类的链霉素、庆大霉素，以及林可霉素、四环素、金霉素、万古霉素等，其中青霉素与头孢菌素占有很大市场。
+            <p style="text-indent: 2em;font-size: 16px!important;">青霉素与头孢菌素同属于抗生素，而抗生素在目前的制药工业中仍占有举足轻重的地位，尤其是下游半合成工艺的发展，带动了整体的工业生产规模，其中包括有β-内酰胺类的青霉素与头孢菌素C，也包括大环酯类的红霉素、利福霉素，氨基环醇类的链霉素、庆大霉素，以及林可霉素、四环素、金霉素、万古霉素等，其中青霉素与头孢菌素占有很大市场。
             </p>
-            <p style="text-indent: 2em;">活性炭在抗生素中主要是脱色，以青霉素为例，青霉素的生产一般经过菌种选择、孢子制备、种子培养、发酵、产品结晶分离等步骤得到成品。其中发酵液的冷冻吸附脱色是青霉素生产的关键环节，一般是在青霉素的第二道醋酸丁酯萃取液中加入活性炭，pH一般控制为2左右，温度控制为5℃左右。活性炭不仅需要脱色，还需要去除热源。因此，活性炭要求是药用级碳，对灰分、热源、金属离子等都有较高要求。
+            <p style="text-indent: 2em;font-size: 16px!important;">活性炭在抗生素中主要是脱色，以青霉素为例，青霉素的生产一般经过菌种选择、孢子制备、种子培养、发酵、产品结晶分离等步骤得到成品。其中发酵液的冷冻吸附脱色是青霉素生产的关键环节，一般是在青霉素的第二道醋酸丁酯萃取液中加入活性炭，pH一般控制为2左右，温度控制为5℃左右。活性炭不仅需要脱色，还需要去除热源。因此，活性炭要求是药用级碳，对灰分、热源、金属离子等都有较高要求。
             </p>
             
             <p class="clear"></p>
