--- a/medicine6.html
+++ b/medicine6.html
@@ -128,9 +128,9 @@
             <div style="text-align:center;">
               <img src="./image/medicine6-0.jpg" style="width: 80%;">
             </div>
-            <p style="text-indent: 2em;">扑息热痛（对乙酰氨基酚）是最常用的非抗炎解热镇痛药，镇痛作用较弱，无抗炎抗风湿作用，是乙酰苯胺类药物中最好的品种。特别适合于不能应用羧酸类药物的病人。用于感冒、牙痛等症。
+            <p style="text-indent: 2em;font-size: 16px!important;">扑息热痛（对乙酰氨基酚）是最常用的非抗炎解热镇痛药，镇痛作用较弱，无抗炎抗风湿作用，是乙酰苯胺类药物中最好的品种。特别适合于不能应用羧酸类药物的病人。用于感冒、牙痛等症。
             </p>
-            <p style="text-indent: 2em;">扑息热痛结构式不复杂，合成比较简单，起始原料为对氨基酚，做一道乙酰化即可，精制脱色一般是水相热过滤加入活性炭脱色，再冷却结晶得到目标产品。
+            <p style="text-indent: 2em;font-size: 16px!important;">扑息热痛结构式不复杂，合成比较简单，起始原料为对氨基酚，做一道乙酰化即可，精制脱色一般是水相热过滤加入活性炭脱色，再冷却结晶得到目标产品。
             </p>
             
             <p class="clear"></p>
