--- a/medicine7.html
+++ b/medicine7.html
@@ -128,9 +128,9 @@
             <div style="text-align:center;">
               <img src="./image/medicine7-0.jpg" style="width: 80%;">
             </div>
-            <p style="text-indent: 2em;">活性炭因其巨大的比表面积及孔径分布，可非特异性的吸附多种有毒物质，与此同时，活性炭在人体内的化学性质非常稳定，不会对人体器官带来干扰，因此在国外常被用作肠胃道毒物的解毒剂。
+            <p style="text-indent: 2em;font-size: 16px!important;">活性炭因其巨大的比表面积及孔径分布，可非特异性的吸附多种有毒物质，与此同时，活性炭在人体内的化学性质非常稳定，不会对人体器官带来干扰，因此在国外常被用作肠胃道毒物的解毒剂。
             </p>
-            <p style="text-indent: 2em;">另外，随着人们生活条件的改善，一些富贵病如高血脂等容易引起健康问题，活性炭作为保健品行业的降脂胶囊，也可用于预防高血脂。
+            <p style="text-indent: 2em;font-size: 16px!important;">另外，随着人们生活条件的改善，一些富贵病如高血脂等容易引起健康问题，活性炭作为保健品行业的降脂胶囊，也可用于预防高血脂。
             </p>       
             
             <p class="clear"></p>
