--- a/medicine8.html
+++ b/medicine8.html
@@ -128,9 +128,9 @@
             <div style="text-align:center;">
               <img src="./image/medicine8-0.jpg" style="width: 80%;">
             </div>
-            <p style="text-indent: 2em;">血液灌流是将患者动脉血引入储有吸附材料的血液灌流装置，通过接触血液使其中的毒物、代谢产物被吸附而净化，然后再回输体内的过程。
+            <p style="text-indent: 2em;font-size: 16px!important;">血液灌流是将患者动脉血引入储有吸附材料的血液灌流装置，通过接触血液使其中的毒物、代谢产物被吸附而净化，然后再回输体内的过程。
             </p>
-            <p style="text-indent: 2em;">血液灌流装置由灌流罐、吸附剂、微囊膜组成。用于临床的主要有白蛋白火棉胶包裹活性炭、丙烯酸水凝胶包裹活性炭和醋酸纤维包裹活性炭等，活性炭通常是8～14目的椰壳炭， 能有效去除血液内肌酐、尿酸、中分子物质、酚类、胍类、吲哚、有机酸及多种药物，但不能去除尿素、磷酸盐、水分及电解质，因此治疗尿毒症时，一般应与HD（血液透析）或HF（血液滤过）联用。
+            <p style="text-indent: 2em;font-size: 16px!important;">血液灌流装置由灌流罐、吸附剂、微囊膜组成。用于临床的主要有白蛋白火棉胶包裹活性炭、丙烯酸水凝胶包裹活性炭和醋酸纤维包裹活性炭等，活性炭通常是8～14目的椰壳炭， 能有效去除血液内肌酐、尿酸、中分子物质、酚类、胍类、吲哚、有机酸及多种药物，但不能去除尿素、磷酸盐、水分及电解质，因此治疗尿毒症时，一般应与HD（血液透析）或HF（血液滤过）联用。
             </p>         
             
             <div style="text-align:center;">
