--- a/medicine9.html
+++ b/medicine9.html
@@ -128,7 +128,7 @@
             <div style="text-align:center;">
               <img src="./image/medicine9-0.jpg" style="width: 80%;">
             </div>
-            <p style="text-indent: 2em;">活性炭具有吸附油污的功能，在化妆品如洗面奶或面膜中，添加一定量的活性炭，可有效吸附肌肤本身代谢油脂，尤其是对黑头的去除效果较好。</p>
+            <p style="text-indent: 2em;font-size: 16px!important;">活性炭具有吸附油污的功能，在化妆品如洗面奶或面膜中，添加一定量的活性炭，可有效吸附肌肤本身代谢油脂，尤其是对黑头的去除效果较好。</p>
             
             <p class="clear"></p>
             <br>
