--- a/water1.html
+++ b/water1.html
@@ -110,13 +110,13 @@
             <div style="text-align:center;">
               <img src="./image/water1-0.jpg" style="width: 80%;">
             </div>
-            <p style="text-indent: 2em;">近年来，我国的地表水体被大量的有害化学物质和病原体微生物污染，常规净水工艺无法消除这些种类繁多的有害物，饮用水深度处理势在必行。活性炭有着巨大的比表面积和发达空隙，被广泛应用于各种处理工艺中。
+            <p style="text-indent: 2em;font-size: 16px!important;">近年来，我国的地表水体被大量的有害化学物质和病原体微生物污染，常规净水工艺无法消除这些种类繁多的有害物，饮用水深度处理势在必行。活性炭有着巨大的比表面积和发达空隙，被广泛应用于各种处理工艺中。
             </p>
-            <p style="text-indent: 2em;">水体中的有机物主要是溶解性有机污染物（农药、医药、塑化剂、个人护理防护用品）,多数分子直径小于5nm，采用活性炭吸附的方式不仅操作简单费用低廉，而且净化效果也非常好。
+            <p style="text-indent: 2em;font-size: 16px!important;">水体中的有机物主要是溶解性有机污染物（农药、医药、塑化剂、个人护理防护用品）,多数分子直径小于5nm，采用活性炭吸附的方式不仅操作简单费用低廉，而且净化效果也非常好。
             </p>
-            <p style="text-indent: 2em;">一般颗粒或柱状活性炭多用于水的深度处理，其处理方式一般为活性炭滤床过滤，经过一段时间吸附饱和后的活性炭被再生后重复使用。而粉状炭多用于水的预处理，例如在混凝时投加到水中，吸附水中的有机物后在沉淀时与矾花一起从水中去除，所投加的粉炭属一次性使用，无法进行再生。与粉炭相比，颗粒或柱状炭过滤的处理效果稳定，出水水质好，吸附饱和后的活性炭可以再生重复使用，运行费用较低，因此大型水厂一般都使用粒状炭，不过粒状炭需单设炭滤池或滤罐，设备投资比粉状炭高。
+            <p style="text-indent: 2em;font-size: 16px!important;">一般颗粒或柱状活性炭多用于水的深度处理，其处理方式一般为活性炭滤床过滤，经过一段时间吸附饱和后的活性炭被再生后重复使用。而粉状炭多用于水的预处理，例如在混凝时投加到水中，吸附水中的有机物后在沉淀时与矾花一起从水中去除，所投加的粉炭属一次性使用，无法进行再生。与粉炭相比，颗粒或柱状炭过滤的处理效果稳定，出水水质好，吸附饱和后的活性炭可以再生重复使用，运行费用较低，因此大型水厂一般都使用粒状炭，不过粒状炭需单设炭滤池或滤罐，设备投资比粉状炭高。
             </p>
-            <p style="text-indent: 2em;">随着人们对水质要求的提高，家庭净水器、直饮水终端逐渐在日常生活中普及。大多数净水器都使用活性炭作为滤材，主要分为两类：直接灌装颗粒活性炭制作成散炭滤芯；将粉末炭与粘结剂混合烧制成炭棒。净水器活性炭通常使用椰壳炭，对灰分、pH、铁含量等指标有着更高要求。 
+            <p style="text-indent: 2em;font-size: 16px!important;">随着人们对水质要求的提高，家庭净水器、直饮水终端逐渐在日常生活中普及。大多数净水器都使用活性炭作为滤材，主要分为两类：直接灌装颗粒活性炭制作成散炭滤芯；将粉末炭与粘结剂混合烧制成炭棒。净水器活性炭通常使用椰壳炭，对灰分、pH、铁含量等指标有着更高要求。 
             </p>
             <div style="text-align:center;">
               <img src="./image/water1-1.jpg" style="width: 50%;">
