--- a/water2.html
+++ b/water2.html
@@ -110,9 +110,9 @@
             <div style="text-align:center;">
               <img src="./image/water2-0.jpg" style="width: 50%;">
             </div>
-            <p style="text-indent: 2em;">活性炭对某些重金属化合物有较强的吸附能力，如汞、铅、铁、镍、铬、锌、钴等，因此，活性炭在电镀、冶炼、染印、炼油厂等废水处理上也有很好的效果。在工业废水处理一级物化处理工序中，活性炭主要作用是絮凝吸附分离，用于吸附或协助絮凝一些难生化降解或对微生物有毒有害的有机污染物，比较简单应用技术是粉末活性炭工艺，在工业废水处理中加入适量的活性炭粉末，可以去除废水中不可生物降解的色度、臭味、重金属及其络合物。
+            <p style="text-indent: 2em;font-size: 16px!important;">活性炭对某些重金属化合物有较强的吸附能力，如汞、铅、铁、镍、铬、锌、钴等，因此，活性炭在电镀、冶炼、染印、炼油厂等废水处理上也有很好的效果。在工业废水处理一级物化处理工序中，活性炭主要作用是絮凝吸附分离，用于吸附或协助絮凝一些难生化降解或对微生物有毒有害的有机污染物，比较简单应用技术是粉末活性炭工艺，在工业废水处理中加入适量的活性炭粉末，可以去除废水中不可生物降解的色度、臭味、重金属及其络合物。
             </p>
-            <p style="text-indent: 2em;">在工业废水处理中，活性炭在一级、二级、三级处理工序中均有使用，对于污染成分较为复杂的工业废水，在多数情况下需要将集中处理工艺组合起来进行废水处理，活性炭一般用于预处理，其主要优势在于吸附油脂等效果好，可再生，价格便宜，能对后端的离子树脂等形成保护。   
+            <p style="text-indent: 2em;font-size: 16px!important;">在工业废水处理中，活性炭在一级、二级、三级处理工序中均有使用，对于污染成分较为复杂的工业废水，在多数情况下需要将集中处理工艺组合起来进行废水处理，活性炭一般用于预处理，其主要优势在于吸附油脂等效果好，可再生，价格便宜，能对后端的离子树脂等形成保护。   
             </p>       
             <p class="clear"></p>
             <br>
