--- a/water3.html
+++ b/water3.html
@@ -110,9 +110,9 @@
             <div style="text-align:center;">
               <img src="./image/water3-0.jpg" style="width: 80%;">
             </div>
-            <p style="text-indent: 2em;">冷凝水循环系统是指冷凝水换热并经降温，再循环使用的给水系统。冷水流过需要降温的生产设备（常称换热设备，如换热器、冷凝器、反应器）后，温度上升，使升温冷水流过冷却设备则水温回降，可用泵送回生产设备再次使用，水的用量大大降低，常可节约95%以上。冷凝水占工业用水量的70%左右，因此，冷凝水循环系统起了节约大量工业用水的作用。
+            <p style="text-indent: 2em;font-size: 16px!important;">冷凝水循环系统是指冷凝水换热并经降温，再循环使用的给水系统。冷水流过需要降温的生产设备（常称换热设备，如换热器、冷凝器、反应器）后，温度上升，使升温冷水流过冷却设备则水温回降，可用泵送回生产设备再次使用，水的用量大大降低，常可节约95%以上。冷凝水占工业用水量的70%左右，因此，冷凝水循环系统起了节约大量工业用水的作用。
             </p>
-            <p style="text-indent: 2em;">冷凝水在循环过程中，会有管道的腐蚀，同时换热设备中一些油污也会有泄露，常常会在冷凝水中引入Fe离子及有机杂质，对热交换的效率会产生不利影响。因此在冷凝水的循环中需对水进行净化防腐，活性炭因其孔径分布的特征，对有机小分子有比较好的吸附效果，常用于冷凝水的有机小分子去除。
+            <p style="text-indent: 2em;font-size: 16px!important;">冷凝水在循环过程中，会有管道的腐蚀，同时换热设备中一些油污也会有泄露，常常会在冷凝水中引入Fe离子及有机杂质，对热交换的效率会产生不利影响。因此在冷凝水的循环中需对水进行净化防腐，活性炭因其孔径分布的特征，对有机小分子有比较好的吸附效果，常用于冷凝水的有机小分子去除。
             </p>        
             <div style="text-align:center;">
               <img src="./image/water3-1.jpg" style="width: 80%;">
