--- a/chemical5.html
+++ b/chemical5.html
@@ -119,7 +119,7 @@
             <div style="text-align:center;">
               <img src="./image/chemical5-0.jpg" style="width: 50%;">
             </div>
-            <p style="text-indent: 2em;">农化产品的原药以化学合成为主，在生产制备过程中，一般多会带有黄色，可采用活性炭热过滤的方法脱色，采用硅藻土助滤及二级过滤系统，可以高效脱色。</p>
+            <p style="text-indent: 2em;font-size: 16px!important;">农化产品的原药以化学合成为主，在生产制备过程中，一般多会带有黄色，可采用活性炭热过滤的方法脱色，采用硅藻土助滤及二级过滤系统，可以高效脱色。</p>
 
             <p class="clear"></p>
             <br>
