--- a/food8.html
+++ b/food8.html
@@ -125,7 +125,7 @@
             <div style="text-align:center;">
               <img src="./image/food8-0.jpg" style="width: 80%;">
             </div>
-            <p style="text-indent: 2em;">植物炭黑作为天然可食用的色素，可用于食品行业的着色添加剂，如面包、曲奇、奥利奥、蛋糕等，一般多采用椰壳或竹子。根据食品安全剂使用标准GB2760-2014，在冷冻饮品/糖果/糕点/饼干等食品中其最大使用量为5g/kg，为达到好的着色效果，植物炭黑需要有非常高的着色强度，最好是40以上。而植物炭黑粒径越细，着色强度越高，一般其平均粒径在5um左右才会有好的着色效果。</p>
+            <p style="text-indent: 2em;font-size: 16px!important;">植物炭黑作为天然可食用的色素，可用于食品行业的着色添加剂，如面包、曲奇、奥利奥、蛋糕等，一般多采用椰壳或竹子。根据食品安全剂使用标准GB2760-2014，在冷冻饮品/糖果/糕点/饼干等食品中其最大使用量为5g/kg，为达到好的着色效果，植物炭黑需要有非常高的着色强度，最好是40以上。而植物炭黑粒径越细，着色强度越高，一般其平均粒径在5um左右才会有好的着色效果。</p>
             <p class="clear"></p>
 			      <br>
           </div>
