--- a/gas12.html
+++ b/gas12.html
@@ -143,11 +143,11 @@
             <div style="text-align:center;">
               <img src="./image/gas12-0.jpg" style="width: 80%;">
             </div>
-            <p style="text-indent: 2em;">活性炭过滤材料是专用于处理空气中的异味及污染，同时也广泛用于空调通风场所的空气过滤，能有效除去大量的臭气及有害气体。
+            <p style="text-indent: 2em;font-size: 16px!important;">活性炭过滤材料是专用于处理空气中的异味及污染，同时也广泛用于空调通风场所的空气过滤，能有效除去大量的臭气及有害气体。
             </p>
-            <p style="text-indent: 2em;">通常活性炭会被制作成净化器过滤网，应用在空调机、空气净化器、汽车滤芯等设备。活性炭滤网采用通孔结构的铝蜂窝、塑料蜂窝、纸蜂窝为载体，与传统活性炭过滤网相比，具有更优良的气体动力学性能，体积密度小，比表面积大、吸附效率高，风阻系数小。
+            <p style="text-indent: 2em;font-size: 16px!important;">通常活性炭会被制作成净化器过滤网，应用在空调机、空气净化器、汽车滤芯等设备。活性炭滤网采用通孔结构的铝蜂窝、塑料蜂窝、纸蜂窝为载体，与传统活性炭过滤网相比，具有更优良的气体动力学性能，体积密度小，比表面积大、吸附效率高，风阻系数小。
             </p>
-            <p style="text-indent: 2em;">蜂窝状活性炭滤网是在聚氨酯泡棉上载附粉状活性炭制成，其含碳量在35%-50%左右。具有活性炭高效的吸附性能，可用于空气净化，去除挥发性有机化合物和空气中的污染物。
+            <p style="text-indent: 2em;font-size: 16px!important;">蜂窝状活性炭滤网是在聚氨酯泡棉上载附粉状活性炭制成，其含碳量在35%-50%左右。具有活性炭高效的吸附性能，可用于空气净化，去除挥发性有机化合物和空气中的污染物。
             </p>
             <p class="clear"></p>
             <br>
