--- a/gas14.html
+++ b/gas14.html
@@ -143,7 +143,7 @@
             <div style="text-align:center;">
               <img src="./image/gas14-0.jpg" style="width: 50%;">
             </div>
-            <p style="text-indent: 2em;">防毒面罩或口罩可利用活性炭来过滤有毒有害气体，可吸附如VOCs、农药、H2S、Cl2等刺激性气体，防毒及除臭效果显著。一般活性炭具有一定的吸附饱和平衡值，因此使用一定时长后需及时更换。</p>
+            <p style="text-indent: 2em;font-size: 16px!important;">防毒面罩或口罩可利用活性炭来过滤有毒有害气体，可吸附如VOCs、农药、H2S、Cl2等刺激性气体，防毒及除臭效果显著。一般活性炭具有一定的吸附饱和平衡值，因此使用一定时长后需及时更换。</p>
             <p class="clear"></p>
             <br>
           </div>
