--- a/gas4.html
+++ b/gas4.html
@@ -143,9 +143,9 @@
             <div style="text-align:center;">
               <img src="./image/gas4-0.jpg" style="width: 60%;">
             </div>
-            <p style="text-indent: 2em;">挥发性的有机化合物，简称为VOC(Volatile Organic Compounds)，在工业生产中，通常作为溶剂来使用，如果使用量不大，一般企业会在使用之后直接排放到大气中，而大部分有机溶剂具有毒性，会容易经呼吸系统进入生物体内，从而造成脏器及神经系统的损伤。因此，国家要求企业在生产中需对VOC的排放进行监控，根据GB37822-2019《挥发性有机物无组织排放控制标准》，一旦NMHC（非甲烷总烃）超过3kg/h(重点地区2kg/h)时，企业需配置VOCs处理设施，目前VOC的处理主要有焚烧氧化、吸附、吸收、冷凝、生物、膜分离等技术，对于风量不大、浓度不高的废气，使用活性炭直接吸附是比较合适的方式。
+            <p style="text-indent: 2em;font-size: 16px!important;">挥发性的有机化合物，简称为VOC(Volatile Organic Compounds)，在工业生产中，通常作为溶剂来使用，如果使用量不大，一般企业会在使用之后直接排放到大气中，而大部分有机溶剂具有毒性，会容易经呼吸系统进入生物体内，从而造成脏器及神经系统的损伤。因此，国家要求企业在生产中需对VOC的排放进行监控，根据GB37822-2019《挥发性有机物无组织排放控制标准》，一旦NMHC（非甲烷总烃）超过3kg/h(重点地区2kg/h)时，企业需配置VOCs处理设施，目前VOC的处理主要有焚烧氧化、吸附、吸收、冷凝、生物、膜分离等技术，对于风量不大、浓度不高的废气，使用活性炭直接吸附是比较合适的方式。
             </p>
-            <p style="text-indent: 2em;">活性炭直接吸附工艺目前已经相当成熟，投资少、可靠性高、维护简单、能耗低，所产生的废活性炭如果是颗粒或柱状碳，可以送至专业处理公司进行再生，实现重复利用。另外，活性炭吸附设备通常也会作为应急保险措施与其他VOCs去除设备联用。
+            <p style="text-indent: 2em;font-size: 16px!important;">活性炭直接吸附工艺目前已经相当成熟，投资少、可靠性高、维护简单、能耗低，所产生的废活性炭如果是颗粒或柱状碳，可以送至专业处理公司进行再生，实现重复利用。另外，活性炭吸附设备通常也会作为应急保险措施与其他VOCs去除设备联用。
             </p>
             <p class="clear"></p>
             <br>
