--- a/gold.html
+++ b/gold.html
@@ -101,16 +101,16 @@
             <div style="text-align:center;">
               <img src="./image/gold1-0.jpg" style="width: 80%;">
             </div>
-            <p style="text-indent: 2em;">金矿中的黄金冶炼提取过程较为复杂，对于高品位的矿石一般使用氰化法，对于低品位的矿石一般使用堆浸法。</p>
-            <p style="text-indent: 2em;">氰化法提金工艺是现在从矿石或精矿中提取金的主要方法。氰化法提金工艺包括：氰化浸出、浸出矿浆的洗涤过滤、氰化液或氰化矿浆中金的提取和成品的冶炼等几个基本工序。
+            <p style="text-indent: 2em;font-size: 16px!important;">金矿中的黄金冶炼提取过程较为复杂，对于高品位的矿石一般使用氰化法，对于低品位的矿石一般使用堆浸法。</p>
+            <p style="text-indent: 2em;font-size: 16px!important;">氰化法提金工艺是现在从矿石或精矿中提取金的主要方法。氰化法提金工艺包括：氰化浸出、浸出矿浆的洗涤过滤、氰化液或氰化矿浆中金的提取和成品的冶炼等几个基本工序。
             </p>
-            <p style="text-indent: 2em;">我国黄金矿山现有氰化厂基本采用两类提金工艺流程，一类是以浓密机进行连续逆流洗涤，用锌粉置换沉淀回收金的常规氰化法提金工艺流程（CCD法和CCF法），另一类则是无须过滤洗涤，采用活性炭直接从氰化矿浆中吸附回收金的无过滤氰化炭浆工艺流程(CIP法和CIL法)；
+            <p style="text-indent: 2em;font-size: 16px!important;">我国黄金矿山现有氰化厂基本采用两类提金工艺流程，一类是以浓密机进行连续逆流洗涤，用锌粉置换沉淀回收金的常规氰化法提金工艺流程（CCD法和CCF法），另一类则是无须过滤洗涤，采用活性炭直接从氰化矿浆中吸附回收金的无过滤氰化炭浆工艺流程(CIP法和CIL法)；
             </p>
-            <p style="text-indent: 2em;">CIP（carbon in pulp）即炭浆法提金，是一种直接用活性炭从氰化矿浆中吸附回收金的无过滤氰化炭浆工艺流程。主要包括浸出矿浆的准备，氰化浸出，活性炭吸附，载金炭解吸，经电击得到金泥，脱金炭再循环，浸出矿浆的处理等七个作业阶段。
+            <p style="text-indent: 2em;font-size: 16px!important;">CIP（carbon in pulp）即炭浆法提金，是一种直接用活性炭从氰化矿浆中吸附回收金的无过滤氰化炭浆工艺流程。主要包括浸出矿浆的准备，氰化浸出，活性炭吸附，载金炭解吸，经电击得到金泥，脱金炭再循环，浸出矿浆的处理等七个作业阶段。
             </p>
-            <p style="text-indent: 2em;">CIL（Carbon In Leach），即炭浸法提金。是一种向矿浆中加入活性炭，同时进行浸出和吸附的工艺流程。主要步骤为破碎，磨矿，浸出，解吸电解，尾矿脱水等步骤，与CIP相比简化了CIP工艺的浸出和氰化。
+            <p style="text-indent: 2em;font-size: 16px!important;">CIL（Carbon In Leach），即炭浸法提金。是一种向矿浆中加入活性炭，同时进行浸出和吸附的工艺流程。主要步骤为破碎，磨矿，浸出，解吸电解，尾矿脱水等步骤，与CIP相比简化了CIP工艺的浸出和氰化。
             </p>
-            <p style="text-indent: 2em;">这两种方法一般是用颗粒或柱状碳，在罐中进行搅拌。由于搅拌的过程中活性炭与含有矿物的浆料反复摩擦，因此对活性炭的球磨强度有一定要求。
+            <p style="text-indent: 2em;font-size: 16px!important;">这两种方法一般是用颗粒或柱状碳，在罐中进行搅拌。由于搅拌的过程中活性炭与含有矿物的浆料反复摩擦，因此对活性炭的球磨强度有一定要求。
             </p>
             <div style="text-align:center;">
               <img src="./image/gold1-1.jpg" style="width: 80%;">
