--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       </div>
 
       <div style="width: 100%; margin-top: 30px; text-align: left;">    
-        <p style="text-indent: 2em;">山东飞肯新材料科技有限公司，是一家由多名活性炭及精细化工领域十年以上资深人士发起创立的企业。基于我们对活性炭生产及应用领域的深刻理解，山东飞肯新材料立志于为客户提供完整的专业定制化解决方案！公司目前已与多家世界著名的活性炭生产企业展开了深入合作，涉及到的活性炭材质有烟煤，无烟煤，褐煤，泥煤，木质，椰壳，沥青，竹子等，从而能够更好地满足制药，食品，化工，催化剂，气体净化，水处理等行业对净化的需求。得力于中国合作伙伴的大力支持，山东飞肯新材料具备了对基碳进行酸洗、水洗、筛分、分装、配碳、改性等二次处理能力，同时拥有活性炭微观结构如孔径孔容、粒径分布等参数的强大数据库，可为客户提供定制化的脱杂筛碳方案。山东飞肯新材料，欢迎您的问询！
+        <p style="text-indent: 2em">山东飞肯新材料科技有限公司，是一家由多名活性炭及精细化工领域十年以上资深人士发起创立的企业。基于我们对活性炭生产及应用领域的深刻理解，山东飞肯新材料立志于为客户提供完整的专业定制化解决方案！公司目前已与多家世界著名的活性炭生产企业展开了深入合作，涉及到的活性炭材质有烟煤，无烟煤，褐煤，泥煤，木质，椰壳，沥青，竹子等，从而能够更好地满足制药，食品，化工，催化剂，气体净化，水处理等行业对净化的需求。得力于中国合作伙伴的大力支持，山东飞肯新材料具备了对基碳进行酸洗、水洗、筛分、分装、配碳、改性等二次处理能力，同时拥有活性炭微观结构如孔径孔容、粒径分布等参数的强大数据库，可为客户提供定制化的脱杂筛碳方案。山东飞肯新材料，欢迎您的问询！
           <a href="./aboutus.html" ><span style="font-size: 9pt;">[点击查看详情]</span></a>
         </p>
         <img src="./image/aboutus-small.jpg" width="100%"/>
